--- a/covet/src/github.com/johnstarich/go/covet/internal/summary/summary.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/summary/summary.go.html
@@ -55,59 +55,60 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package summary
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;fmt&#34;
-<span id="L5" class="ln">     5  </span>	&#34;strings&#34;
-<span id="L6" class="ln">     6  </span>
-<span id="L7" class="ln">     7  </span>	&#34;github.com/jedib0t/go-pretty/v6/table&#34;
-<span id="L8" class="ln">     8  </span>	&#34;github.com/jedib0t/go-pretty/v6/text&#34;
-<span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/covet/internal/coverfile&#34;
-<span id="L10" class="ln">    10  </span>	&#34;github.com/johnstarich/go/covet/internal/coverstatus&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span><span class="comment">// New generates a new summary report in the given format</span>
-<span id="L14" class="ln">    14  </span>func New(uncoveredFiles []coverfile.File, targetCoverage uint, format Format) string {
-<span id="L15" class="ln">    15  </span>	if len(uncoveredFiles) == 0 {
-<span id="L16" class="ln">    16  </span>		return fmt.Sprintf(&#34;Successfully reached diff coverage target: &gt;%d%%\n&#34;, targetCoverage)
-<span id="L17" class="ln">    17  </span>	}
-<span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>	var sb strings.Builder
-<span id="L20" class="ln">    20  </span>	sb.WriteString(&#34;Diff coverage is below target. Add tests for these files:\n&#34;)
-<span id="L21" class="ln">    21  </span>	tbl := table.NewWriter()
-<span id="L22" class="ln">    22  </span>	const coverageColumnIndex = 2
-<span id="L23" class="ln">    23  </span>	tbl.SetColumnConfigs([]table.ColumnConfig{
-<span id="L24" class="ln">    24  </span>		{Number: coverageColumnIndex, Align: text.AlignCenter},
-<span id="L25" class="ln">    25  </span>	})
-<span id="L26" class="ln">    26  </span>	tbl.SuppressEmptyColumns()
-<span id="L27" class="ln">    27  </span>	bold := boldColor()
-<span id="L28" class="ln">    28  </span>	tbl.AppendHeader(table.Row{
-<span id="L29" class="ln">    29  </span>		&#34;&#34;,
-<span id="L30" class="ln">    30  </span>		format.Colorize(bold, &#34;Lines&#34;),
-<span id="L31" class="ln">    31  </span>		format.Colorize(bold, &#34;Coverage&#34;),
-<span id="L32" class="ln">    32  </span>		format.Colorize(bold, &#34;File&#34;),
-<span id="L33" class="ln">    33  </span>	})
-<span id="L34" class="ln">    34  </span>	for _, f := range uncoveredFiles {
-<span id="L35" class="ln">    35  </span>		percent := FileCoverage(f)
-<span id="L36" class="ln">    36  </span>		status := coverstatus.New(percent)
-<span id="L37" class="ln">    37  </span>		tbl.AppendRow(table.Row{
-<span id="L38" class="ln">    38  </span>			format.StatusIcon(status),
-<span id="L39" class="ln">    39  </span>			format.ColorizeStatus(status, format.Monospace(formatFraction(f.Covered, f.Uncovered+f.Covered))),
-<span id="L40" class="ln">    40  </span>			format.ColorizeStatus(status, format.Monospace(FormatPercent(percent)+&#34; &#34;+formatGraph(percent, format))),
-<span id="L41" class="ln">    41  </span>			f.Name,
-<span id="L42" class="ln">    42  </span>		})
-<span id="L43" class="ln">    43  </span>	}
-<span id="L44" class="ln">    44  </span>	sb.WriteString(format.FormatTable(tbl))
-<span id="L45" class="ln">    45  </span>	sb.WriteRune(&#39;\n&#39;)
-<span id="L46" class="ln">    46  </span>	return sb.String()
-<span id="L47" class="ln">    47  </span>}
-<span id="L48" class="ln">    48  </span>
-<span id="L49" class="ln">    49  </span><span class="comment">// FileCoverage returns a File&#39;s coverage percentage between 0 and 1</span>
-<span id="L50" class="ln">    50  </span>func FileCoverage(f coverfile.File) float64 {
-<span id="L51" class="ln">    51  </span>	return float64(f.Covered) / float64(f.Covered+f.Uncovered)
-<span id="L52" class="ln">    52  </span>}
-<span id="L53" class="ln">    53  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package summary generates summary reports in various formats.</span>
+<span id="L2" class="ln">     2  </span>package summary
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	&#34;fmt&#34;
+<span id="L6" class="ln">     6  </span>	&#34;strings&#34;
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span>	&#34;github.com/jedib0t/go-pretty/v6/table&#34;
+<span id="L9" class="ln">     9  </span>	&#34;github.com/jedib0t/go-pretty/v6/text&#34;
+<span id="L10" class="ln">    10  </span>	&#34;github.com/johnstarich/go/covet/internal/coverfile&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/johnstarich/go/covet/internal/coverstatus&#34;
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span><span class="comment">// New generates a new summary report in the given format</span>
+<span id="L15" class="ln">    15  </span>func New(uncoveredFiles []coverfile.File, targetCoverage uint, format Format) string {
+<span id="L16" class="ln">    16  </span>	if len(uncoveredFiles) == 0 {
+<span id="L17" class="ln">    17  </span>		return fmt.Sprintf(&#34;Successfully reached diff coverage target: &gt;%d%%\n&#34;, targetCoverage)
+<span id="L18" class="ln">    18  </span>	}
+<span id="L19" class="ln">    19  </span>
+<span id="L20" class="ln">    20  </span>	var sb strings.Builder
+<span id="L21" class="ln">    21  </span>	sb.WriteString(&#34;Diff coverage is below target. Add tests for these files:\n&#34;)
+<span id="L22" class="ln">    22  </span>	tbl := table.NewWriter()
+<span id="L23" class="ln">    23  </span>	const coverageColumnIndex = 2
+<span id="L24" class="ln">    24  </span>	tbl.SetColumnConfigs([]table.ColumnConfig{
+<span id="L25" class="ln">    25  </span>		{Number: coverageColumnIndex, Align: text.AlignCenter},
+<span id="L26" class="ln">    26  </span>	})
+<span id="L27" class="ln">    27  </span>	tbl.SuppressEmptyColumns()
+<span id="L28" class="ln">    28  </span>	bold := boldColor()
+<span id="L29" class="ln">    29  </span>	tbl.AppendHeader(table.Row{
+<span id="L30" class="ln">    30  </span>		&#34;&#34;,
+<span id="L31" class="ln">    31  </span>		format.Colorize(bold, &#34;Lines&#34;),
+<span id="L32" class="ln">    32  </span>		format.Colorize(bold, &#34;Coverage&#34;),
+<span id="L33" class="ln">    33  </span>		format.Colorize(bold, &#34;File&#34;),
+<span id="L34" class="ln">    34  </span>	})
+<span id="L35" class="ln">    35  </span>	for _, f := range uncoveredFiles {
+<span id="L36" class="ln">    36  </span>		percent := FileCoverage(f)
+<span id="L37" class="ln">    37  </span>		status := coverstatus.New(percent)
+<span id="L38" class="ln">    38  </span>		tbl.AppendRow(table.Row{
+<span id="L39" class="ln">    39  </span>			format.StatusIcon(status),
+<span id="L40" class="ln">    40  </span>			format.ColorizeStatus(status, format.Monospace(formatFraction(f.Covered, f.Uncovered+f.Covered))),
+<span id="L41" class="ln">    41  </span>			format.ColorizeStatus(status, format.Monospace(FormatPercent(percent)+&#34; &#34;+formatGraph(percent, format))),
+<span id="L42" class="ln">    42  </span>			f.Name,
+<span id="L43" class="ln">    43  </span>		})
+<span id="L44" class="ln">    44  </span>	}
+<span id="L45" class="ln">    45  </span>	sb.WriteString(format.FormatTable(tbl))
+<span id="L46" class="ln">    46  </span>	sb.WriteRune(&#39;\n&#39;)
+<span id="L47" class="ln">    47  </span>	return sb.String()
+<span id="L48" class="ln">    48  </span>}
+<span id="L49" class="ln">    49  </span>
+<span id="L50" class="ln">    50  </span><span class="comment">// FileCoverage returns a File&#39;s coverage percentage between 0 and 1</span>
+<span id="L51" class="ln">    51  </span>func FileCoverage(f coverfile.File) float64 {
+<span id="L52" class="ln">    52  </span>	return float64(f.Covered) / float64(f.Covered+f.Uncovered)
+<span id="L53" class="ln">    53  </span>}
+<span id="L54" class="ln">    54  </span>
 </pre><p></p>
 
 <div id="footer">
