--- a/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
@@ -55,55 +55,56 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package testhelpers
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	goos &#34;os&#34;
-<span id="L5" class="ln">     5  </span>	&#34;path&#34;
-<span id="L6" class="ln">     6  </span>	&#34;strings&#34;
-<span id="L7" class="ln">     7  </span>	&#34;testing&#34;
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	&#34;github.com/hack-pad/hackpadfs&#34;
-<span id="L10" class="ln">    10  </span>	&#34;github.com/hack-pad/hackpadfs/mem&#34;
-<span id="L11" class="ln">    11  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
-<span id="L12" class="ln">    12  </span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L13" class="ln">    13  </span>)
-<span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>const testDirPermission = 0700
-<span id="L16" class="ln">    16  </span>
-<span id="L17" class="ln">    17  </span><span class="comment">// OSFSWithTemp returns an os.FS instance with 1) the current module&#39;s directory and 2) a temporary directory mounted inside.</span>
-<span id="L18" class="ln">    18  </span><span class="comment">// Returns the FS paths to both mounts.</span>
-<span id="L19" class="ln">    19  </span>func OSFSWithTemp(t *testing.T, relPathToModuleDir string) (_ hackpadfs.FS, workingDirectory, tempDirectory string) {
-<span id="L20" class="ln">    20  </span>	t.Helper()
-<span id="L21" class="ln">    21  </span>
-<span id="L22" class="ln">    22  </span>	wd, err := goos.Getwd()
-<span id="L23" class="ln">    23  </span>	require.NoError(t, err)
-<span id="L24" class="ln">    24  </span>	osFS := os.NewFS()
-<span id="L25" class="ln">    25  </span>	workingDirectory, err = osFS.FromOSPath(wd)
-<span id="L26" class="ln">    26  </span>	require.NoError(t, err)
-<span id="L27" class="ln">    27  </span>	workingDirectory = path.Join(workingDirectory, relPathToModuleDir)
-<span id="L28" class="ln">    28  </span>
-<span id="L29" class="ln">    29  </span>	tempDirectory, err = osFS.FromOSPath(t.TempDir())
-<span id="L30" class="ln">    30  </span>	require.NoError(t, err)
-<span id="L31" class="ln">    31  </span>	return osFS, workingDirectory, tempDirectory
-<span id="L32" class="ln">    32  </span>}
-<span id="L33" class="ln">    33  </span>
-<span id="L34" class="ln">    34  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
-<span id="L35" class="ln">    35  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
-<span id="L36" class="ln">    36  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
-<span id="L37" class="ln">    37  </span>	t.Helper()
-<span id="L38" class="ln">    38  </span>	fs, err := mem.NewFS()
-<span id="L39" class="ln">    39  </span>	require.NoError(t, err)
-<span id="L40" class="ln">    40  </span>	for name, contents := range files {
-<span id="L41" class="ln">    41  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
-<span id="L42" class="ln">    42  </span>		f, err := hackpadfs.Create(fs, name)
-<span id="L43" class="ln">    43  </span>		require.NoError(t, err)
-<span id="L44" class="ln">    44  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
-<span id="L45" class="ln">    45  </span>		require.NoError(t, err)
-<span id="L46" class="ln">    46  </span>	}
-<span id="L47" class="ln">    47  </span>	return fs
-<span id="L48" class="ln">    48  </span>}
-<span id="L49" class="ln">    49  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package testhelpers contains file system generators for use in tests.</span>
+<span id="L2" class="ln">     2  </span>package testhelpers
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	goos &#34;os&#34;
+<span id="L6" class="ln">     6  </span>	&#34;path&#34;
+<span id="L7" class="ln">     7  </span>	&#34;strings&#34;
+<span id="L8" class="ln">     8  </span>	&#34;testing&#34;
+<span id="L9" class="ln">     9  </span>
+<span id="L10" class="ln">    10  </span>	&#34;github.com/hack-pad/hackpadfs&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/hack-pad/hackpadfs/mem&#34;
+<span id="L12" class="ln">    12  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
+<span id="L13" class="ln">    13  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L14" class="ln">    14  </span>)
+<span id="L15" class="ln">    15  </span>
+<span id="L16" class="ln">    16  </span>const testDirPermission = 0700
+<span id="L17" class="ln">    17  </span>
+<span id="L18" class="ln">    18  </span><span class="comment">// OSFSWithTemp returns an os.FS instance with 1) the current module&#39;s directory and 2) a temporary directory mounted inside.</span>
+<span id="L19" class="ln">    19  </span><span class="comment">// Returns the FS paths to both mounts.</span>
+<span id="L20" class="ln">    20  </span>func OSFSWithTemp(t *testing.T, relPathToModuleDir string) (_ hackpadfs.FS, workingDirectory, tempDirectory string) {
+<span id="L21" class="ln">    21  </span>	t.Helper()
+<span id="L22" class="ln">    22  </span>
+<span id="L23" class="ln">    23  </span>	wd, err := goos.Getwd()
+<span id="L24" class="ln">    24  </span>	require.NoError(t, err)
+<span id="L25" class="ln">    25  </span>	osFS := os.NewFS()
+<span id="L26" class="ln">    26  </span>	workingDirectory, err = osFS.FromOSPath(wd)
+<span id="L27" class="ln">    27  </span>	require.NoError(t, err)
+<span id="L28" class="ln">    28  </span>	workingDirectory = path.Join(workingDirectory, relPathToModuleDir)
+<span id="L29" class="ln">    29  </span>
+<span id="L30" class="ln">    30  </span>	tempDirectory, err = osFS.FromOSPath(t.TempDir())
+<span id="L31" class="ln">    31  </span>	require.NoError(t, err)
+<span id="L32" class="ln">    32  </span>	return osFS, workingDirectory, tempDirectory
+<span id="L33" class="ln">    33  </span>}
+<span id="L34" class="ln">    34  </span>
+<span id="L35" class="ln">    35  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
+<span id="L36" class="ln">    36  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
+<span id="L37" class="ln">    37  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
+<span id="L38" class="ln">    38  </span>	t.Helper()
+<span id="L39" class="ln">    39  </span>	fs, err := mem.NewFS()
+<span id="L40" class="ln">    40  </span>	require.NoError(t, err)
+<span id="L41" class="ln">    41  </span>	for name, contents := range files {
+<span id="L42" class="ln">    42  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
+<span id="L43" class="ln">    43  </span>		f, err := hackpadfs.Create(fs, name)
+<span id="L44" class="ln">    44  </span>		require.NoError(t, err)
+<span id="L45" class="ln">    45  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
+<span id="L46" class="ln">    46  </span>		require.NoError(t, err)
+<span id="L47" class="ln">    47  </span>	}
+<span id="L48" class="ln">    48  </span>	return fs
+<span id="L49" class="ln">    49  </span>}
+<span id="L50" class="ln">    50  </span>
 </pre><p></p>
 
 <div id="footer">
