--- a/datasize/pkg/github.com/johnstarich/go/index.html
+++ b/datasize/pkg/github.com/johnstarich/go/index.html
@@ -91,7 +91,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package datasize parses, formats, and converts to differents units in bytes.
 					</td>
 				</tr>
 			
