--- a/datasize/pkg/github.com/johnstarich/index.html
+++ b/datasize/pkg/github.com/johnstarich/index.html
@@ -102,7 +102,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package datasize parses, formats, and converts to differents units in bytes.
 					</td>
 				</tr>
 			
