--- a/dns/pkg/github.com/johnstarich/go/dns/init/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/init/index.html
@@ -89,7 +89,10 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				
+				<p>
+Package init provides a convenient side-effecting import to set the custom DNS resolver.
+</p>
+
 				
 			</div>
 		</div>
