--- a/dns/pkg/github.com/johnstarich/go/dns/internal/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/internal/index.html
@@ -102,7 +102,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Command dns-test runs the custom resolver with the given query args.
 					</td>
 				</tr>
 			
