--- a/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/main.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/internal/cmd/dns-test/main.go.html
@@ -55,36 +55,37 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package main
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;flag&#34;
-<span id="L5" class="ln">     5  </span>	&#34;fmt&#34;
-<span id="L6" class="ln">     6  </span>	&#34;net&#34;
-<span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>	&#34;github.com/johnstarich/go/dns&#34;
-<span id="L9" class="ln">     9  </span>	&#34;go.uber.org/zap&#34;
-<span id="L10" class="ln">    10  </span>)
-<span id="L11" class="ln">    11  </span>
-<span id="L12" class="ln">    12  </span>func main() {
-<span id="L13" class="ln">    13  </span>	flag.Parse()
-<span id="L14" class="ln">    14  </span>	hostname := flag.Arg(0)
-<span id="L15" class="ln">    15  </span>	if hostname == &#34;&#34; {
-<span id="L16" class="ln">    16  </span>		hostname = &#34;api.github.com&#34;
-<span id="L17" class="ln">    17  </span>	}
-<span id="L18" class="ln">    18  </span>	fmt.Println(&#34;Looking up&#34;, hostname)
-<span id="L19" class="ln">    19  </span>
-<span id="L20" class="ln">    20  </span>	net.DefaultResolver = dns.NewWithConfig(dns.Config{
-<span id="L21" class="ln">    21  </span>		Logger: zap.NewExample(),
-<span id="L22" class="ln">    22  </span>	})
-<span id="L23" class="ln">    23  </span>
-<span id="L24" class="ln">    24  </span>	addrs, err := net.LookupIP(hostname)
-<span id="L25" class="ln">    25  </span>	if err != nil {
-<span id="L26" class="ln">    26  </span>		panic(err)
-<span id="L27" class="ln">    27  </span>	}
-<span id="L28" class="ln">    28  </span>	fmt.Println(addrs)
-<span id="L29" class="ln">    29  </span>}
-<span id="L30" class="ln">    30  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Command dns-test runs the custom resolver with the given query args.</span>
+<span id="L2" class="ln">     2  </span>package main
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	&#34;flag&#34;
+<span id="L6" class="ln">     6  </span>	&#34;fmt&#34;
+<span id="L7" class="ln">     7  </span>	&#34;net&#34;
+<span id="L8" class="ln">     8  </span>
+<span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/dns&#34;
+<span id="L10" class="ln">    10  </span>	&#34;go.uber.org/zap&#34;
+<span id="L11" class="ln">    11  </span>)
+<span id="L12" class="ln">    12  </span>
+<span id="L13" class="ln">    13  </span>func main() {
+<span id="L14" class="ln">    14  </span>	flag.Parse()
+<span id="L15" class="ln">    15  </span>	hostname := flag.Arg(0)
+<span id="L16" class="ln">    16  </span>	if hostname == &#34;&#34; {
+<span id="L17" class="ln">    17  </span>		hostname = &#34;api.github.com&#34;
+<span id="L18" class="ln">    18  </span>	}
+<span id="L19" class="ln">    19  </span>	fmt.Println(&#34;Looking up&#34;, hostname)
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span>	net.DefaultResolver = dns.NewWithConfig(dns.Config{
+<span id="L22" class="ln">    22  </span>		Logger: zap.NewExample(),
+<span id="L23" class="ln">    23  </span>	})
+<span id="L24" class="ln">    24  </span>
+<span id="L25" class="ln">    25  </span>	addrs, err := net.LookupIP(hostname)
+<span id="L26" class="ln">    26  </span>	if err != nil {
+<span id="L27" class="ln">    27  </span>		panic(err)
+<span id="L28" class="ln">    28  </span>	}
+<span id="L29" class="ln">    29  </span>	fmt.Println(addrs)
+<span id="L30" class="ln">    30  </span>}
+<span id="L31" class="ln">    31  </span>
 </pre><p></p>
 
 <div id="footer">
