--- a/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/testhelpers/dns.go.html
@@ -55,114 +55,115 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package testhelpers
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;context&#34;
-<span id="L5" class="ln">     5  </span>	&#34;net&#34;
-<span id="L6" class="ln">     6  </span>	&#34;testing&#34;
-<span id="L7" class="ln">     7  </span>	&#34;time&#34;
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>	&#34;github.com/miekg/dns&#34;
-<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span>const dom = &#34;dns.local.&#34;
-<span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>func hostnamesHandler(ctx context.Context, t *testing.T, responseDelay time.Duration, hostnames map[string][]string) dns.HandlerFunc {
-<span id="L16" class="ln">    16  </span>	return func(w dns.ResponseWriter, r *dns.Msg) {
-<span id="L17" class="ln">    17  </span>		timer := time.NewTimer(responseDelay)
-<span id="L18" class="ln">    18  </span>		defer timer.Stop()
-<span id="L19" class="ln">    19  </span>		select {
-<span id="L20" class="ln">    20  </span>		case &lt;-timer.C:
-<span id="L21" class="ln">    21  </span>		case &lt;-ctx.Done():
-<span id="L22" class="ln">    22  </span>			return
-<span id="L23" class="ln">    23  </span>		}
-<span id="L24" class="ln">    24  </span>
-<span id="L25" class="ln">    25  </span>		var message dns.Msg
-<span id="L26" class="ln">    26  </span>		message.SetReply(r)
-<span id="L27" class="ln">    27  </span>
-<span id="L28" class="ln">    28  </span>		if r.Question[0].Qtype == dns.TypeA {
-<span id="L29" class="ln">    29  </span>			hostname := r.Question[0].Name
-<span id="L30" class="ln">    30  </span>			for _, ip := range hostnames[hostname] {
-<span id="L31" class="ln">    31  </span>				message.Answer = append(message.Answer, &amp;dns.A{
-<span id="L32" class="ln">    32  </span>					Hdr: dns.RR_Header{Name: dom, Rrtype: dns.TypeA, Class: dns.ClassINET, Ttl: 0},
-<span id="L33" class="ln">    33  </span>					A:   net.ParseIP(ip).To4(),
-<span id="L34" class="ln">    34  </span>				})
-<span id="L35" class="ln">    35  </span>			}
-<span id="L36" class="ln">    36  </span>		}
-<span id="L37" class="ln">    37  </span>
-<span id="L38" class="ln">    38  </span>		t.Logf(&#34;DNS message:\n%s&#34;, message.String())
-<span id="L39" class="ln">    39  </span>		err := w.WriteMsg(&amp;message)
-<span id="L40" class="ln">    40  </span>		if err != nil {
-<span id="L41" class="ln">    41  </span>			t.Logf(&#34;Error writing message: %s&#34;, err.Error())
-<span id="L42" class="ln">    42  </span>		}
-<span id="L43" class="ln">    43  </span>	}
-<span id="L44" class="ln">    44  </span>}
-<span id="L45" class="ln">    45  </span>
-<span id="L46" class="ln">    46  </span><span class="comment">// DNSConfig contains options to configure a test DNS server from StartDNSServer()</span>
-<span id="L47" class="ln">    47  </span>type DNSConfig struct {
-<span id="L48" class="ln">    48  </span>	ResponseDelay time.Duration
-<span id="L49" class="ln">    49  </span>	Hostnames     map[string][]string
-<span id="L50" class="ln">    50  </span>	Port          int
-<span id="L51" class="ln">    51  </span>	Network       string <span class="comment">// e.g. udp4, udp6</span>
-<span id="L52" class="ln">    52  </span>}
-<span id="L53" class="ln">    53  </span>
-<span id="L54" class="ln">    54  </span><span class="comment">// StartDNSServer starts a DNS server with the given configuration</span>
-<span id="L55" class="ln">    55  </span>func StartDNSServer(t *testing.T, config DNSConfig) string {
-<span id="L56" class="ln">    56  </span>	t.Helper()
-<span id="L57" class="ln">    57  </span>	const (
-<span id="L58" class="ln">    58  </span>		netUDP4 = &#34;udp4&#34;
-<span id="L59" class="ln">    59  </span>		netUDP6 = &#34;udp6&#34;
-<span id="L60" class="ln">    60  </span>	)
-<span id="L61" class="ln">    61  </span>	if config.Network == &#34;&#34; {
-<span id="L62" class="ln">    62  </span>		config.Network = netUDP4
-<span id="L63" class="ln">    63  </span>	}
-<span id="L64" class="ln">    64  </span>	switch config.Network {
-<span id="L65" class="ln">    65  </span>	case netUDP4, netUDP6:
-<span id="L66" class="ln">    66  </span>	default:
-<span id="L67" class="ln">    67  </span>		t.Fatal(&#34;Unsupported network for DNS:&#34;, config.Network)
-<span id="L68" class="ln">    68  </span>	}
-<span id="L69" class="ln">    69  </span>
-<span id="L70" class="ln">    70  </span>	ctx, cancel := context.WithCancel(context.Background())
-<span id="L71" class="ln">    71  </span>	t.Cleanup(cancel)
-<span id="L72" class="ln">    72  </span>	mux := dns.NewServeMux()
-<span id="L73" class="ln">    73  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
-<span id="L74" class="ln">    74  </span>
-<span id="L75" class="ln">    75  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
-<span id="L76" class="ln">    76  </span>	require.NoError(t, err)
-<span id="L77" class="ln">    77  </span>	ready := make(chan struct{})
-<span id="L78" class="ln">    78  </span>	server := &amp;dns.Server{
-<span id="L79" class="ln">    79  </span>		Net:               config.Network,
-<span id="L80" class="ln">    80  </span>		PacketConn:        packetConn,
-<span id="L81" class="ln">    81  </span>		Handler:           mux,
-<span id="L82" class="ln">    82  </span>		NotifyStartedFunc: func() { close(ready) },
-<span id="L83" class="ln">    83  </span>	}
-<span id="L84" class="ln">    84  </span>	go func() {
-<span id="L85" class="ln">    85  </span>		err := server.ActivateAndServe()
-<span id="L86" class="ln">    86  </span>		require.NoError(t, err)
-<span id="L87" class="ln">    87  </span>	}()
-<span id="L88" class="ln">    88  </span>	go func() {
-<span id="L89" class="ln">    89  </span>		&lt;-ctx.Done()
-<span id="L90" class="ln">    90  </span>		_ = server.Shutdown()
-<span id="L91" class="ln">    91  </span>	}()
-<span id="L92" class="ln">    92  </span>	select {
-<span id="L93" class="ln">    93  </span>	case &lt;-ctx.Done():
-<span id="L94" class="ln">    94  </span>		t.Fatal(ctx.Err())
-<span id="L95" class="ln">    95  </span>	case &lt;-ready:
-<span id="L96" class="ln">    96  </span>	}
-<span id="L97" class="ln">    97  </span>	localAddr := server.PacketConn.LocalAddr().String()
-<span id="L98" class="ln">    98  </span>	_, port, err := net.SplitHostPort(localAddr)
-<span id="L99" class="ln">    99  </span>	require.NoError(t, err)
-<span id="L100" class="ln">   100  </span>	switch config.Network {
-<span id="L101" class="ln">   101  </span>	case netUDP4:
-<span id="L102" class="ln">   102  </span>		localAddr = &#34;127.0.0.1:&#34; + port
-<span id="L103" class="ln">   103  </span>	case netUDP6:
-<span id="L104" class="ln">   104  </span>		localAddr = &#34;[::1]:&#34; + port
-<span id="L105" class="ln">   105  </span>	}
-<span id="L106" class="ln">   106  </span>	return localAddr
-<span id="L107" class="ln">   107  </span>}
-<span id="L108" class="ln">   108  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package testhelpers contains a test DNS server lifecycle manager.</span>
+<span id="L2" class="ln">     2  </span>package testhelpers
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	&#34;context&#34;
+<span id="L6" class="ln">     6  </span>	&#34;net&#34;
+<span id="L7" class="ln">     7  </span>	&#34;testing&#34;
+<span id="L8" class="ln">     8  </span>	&#34;time&#34;
+<span id="L9" class="ln">     9  </span>
+<span id="L10" class="ln">    10  </span>	&#34;github.com/miekg/dns&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span>const dom = &#34;dns.local.&#34;
+<span id="L15" class="ln">    15  </span>
+<span id="L16" class="ln">    16  </span>func hostnamesHandler(ctx context.Context, t *testing.T, responseDelay time.Duration, hostnames map[string][]string) dns.HandlerFunc {
+<span id="L17" class="ln">    17  </span>	return func(w dns.ResponseWriter, r *dns.Msg) {
+<span id="L18" class="ln">    18  </span>		timer := time.NewTimer(responseDelay)
+<span id="L19" class="ln">    19  </span>		defer timer.Stop()
+<span id="L20" class="ln">    20  </span>		select {
+<span id="L21" class="ln">    21  </span>		case &lt;-timer.C:
+<span id="L22" class="ln">    22  </span>		case &lt;-ctx.Done():
+<span id="L23" class="ln">    23  </span>			return
+<span id="L24" class="ln">    24  </span>		}
+<span id="L25" class="ln">    25  </span>
+<span id="L26" class="ln">    26  </span>		var message dns.Msg
+<span id="L27" class="ln">    27  </span>		message.SetReply(r)
+<span id="L28" class="ln">    28  </span>
+<span id="L29" class="ln">    29  </span>		if r.Question[0].Qtype == dns.TypeA {
+<span id="L30" class="ln">    30  </span>			hostname := r.Question[0].Name
+<span id="L31" class="ln">    31  </span>			for _, ip := range hostnames[hostname] {
+<span id="L32" class="ln">    32  </span>				message.Answer = append(message.Answer, &amp;dns.A{
+<span id="L33" class="ln">    33  </span>					Hdr: dns.RR_Header{Name: dom, Rrtype: dns.TypeA, Class: dns.ClassINET, Ttl: 0},
+<span id="L34" class="ln">    34  </span>					A:   net.ParseIP(ip).To4(),
+<span id="L35" class="ln">    35  </span>				})
+<span id="L36" class="ln">    36  </span>			}
+<span id="L37" class="ln">    37  </span>		}
+<span id="L38" class="ln">    38  </span>
+<span id="L39" class="ln">    39  </span>		t.Logf(&#34;DNS message:\n%s&#34;, message.String())
+<span id="L40" class="ln">    40  </span>		err := w.WriteMsg(&amp;message)
+<span id="L41" class="ln">    41  </span>		if err != nil {
+<span id="L42" class="ln">    42  </span>			t.Logf(&#34;Error writing message: %s&#34;, err.Error())
+<span id="L43" class="ln">    43  </span>		}
+<span id="L44" class="ln">    44  </span>	}
+<span id="L45" class="ln">    45  </span>}
+<span id="L46" class="ln">    46  </span>
+<span id="L47" class="ln">    47  </span><span class="comment">// DNSConfig contains options to configure a test DNS server from StartDNSServer()</span>
+<span id="L48" class="ln">    48  </span>type DNSConfig struct {
+<span id="L49" class="ln">    49  </span>	ResponseDelay time.Duration
+<span id="L50" class="ln">    50  </span>	Hostnames     map[string][]string
+<span id="L51" class="ln">    51  </span>	Port          int
+<span id="L52" class="ln">    52  </span>	Network       string <span class="comment">// e.g. udp4, udp6</span>
+<span id="L53" class="ln">    53  </span>}
+<span id="L54" class="ln">    54  </span>
+<span id="L55" class="ln">    55  </span><span class="comment">// StartDNSServer starts a DNS server with the given configuration</span>
+<span id="L56" class="ln">    56  </span>func StartDNSServer(t *testing.T, config DNSConfig) string {
+<span id="L57" class="ln">    57  </span>	t.Helper()
+<span id="L58" class="ln">    58  </span>	const (
+<span id="L59" class="ln">    59  </span>		netUDP4 = &#34;udp4&#34;
+<span id="L60" class="ln">    60  </span>		netUDP6 = &#34;udp6&#34;
+<span id="L61" class="ln">    61  </span>	)
+<span id="L62" class="ln">    62  </span>	if config.Network == &#34;&#34; {
+<span id="L63" class="ln">    63  </span>		config.Network = netUDP4
+<span id="L64" class="ln">    64  </span>	}
+<span id="L65" class="ln">    65  </span>	switch config.Network {
+<span id="L66" class="ln">    66  </span>	case netUDP4, netUDP6:
+<span id="L67" class="ln">    67  </span>	default:
+<span id="L68" class="ln">    68  </span>		t.Fatal(&#34;Unsupported network for DNS:&#34;, config.Network)
+<span id="L69" class="ln">    69  </span>	}
+<span id="L70" class="ln">    70  </span>
+<span id="L71" class="ln">    71  </span>	ctx, cancel := context.WithCancel(context.Background())
+<span id="L72" class="ln">    72  </span>	t.Cleanup(cancel)
+<span id="L73" class="ln">    73  </span>	mux := dns.NewServeMux()
+<span id="L74" class="ln">    74  </span>	mux.HandleFunc(&#34;local.&#34;, hostnamesHandler(ctx, t, config.ResponseDelay, config.Hostnames))
+<span id="L75" class="ln">    75  </span>
+<span id="L76" class="ln">    76  </span>	packetConn, err := net.ListenUDP(config.Network, &amp;net.UDPAddr{Port: config.Port})
+<span id="L77" class="ln">    77  </span>	require.NoError(t, err)
+<span id="L78" class="ln">    78  </span>	ready := make(chan struct{})
+<span id="L79" class="ln">    79  </span>	server := &amp;dns.Server{
+<span id="L80" class="ln">    80  </span>		Net:               config.Network,
+<span id="L81" class="ln">    81  </span>		PacketConn:        packetConn,
+<span id="L82" class="ln">    82  </span>		Handler:           mux,
+<span id="L83" class="ln">    83  </span>		NotifyStartedFunc: func() { close(ready) },
+<span id="L84" class="ln">    84  </span>	}
+<span id="L85" class="ln">    85  </span>	go func() {
+<span id="L86" class="ln">    86  </span>		err := server.ActivateAndServe()
+<span id="L87" class="ln">    87  </span>		require.NoError(t, err)
+<span id="L88" class="ln">    88  </span>	}()
+<span id="L89" class="ln">    89  </span>	go func() {
+<span id="L90" class="ln">    90  </span>		&lt;-ctx.Done()
+<span id="L91" class="ln">    91  </span>		_ = server.Shutdown()
+<span id="L92" class="ln">    92  </span>	}()
+<span id="L93" class="ln">    93  </span>	select {
+<span id="L94" class="ln">    94  </span>	case &lt;-ctx.Done():
+<span id="L95" class="ln">    95  </span>		t.Fatal(ctx.Err())
+<span id="L96" class="ln">    96  </span>	case &lt;-ready:
+<span id="L97" class="ln">    97  </span>	}
+<span id="L98" class="ln">    98  </span>	localAddr := server.PacketConn.LocalAddr().String()
+<span id="L99" class="ln">    99  </span>	_, port, err := net.SplitHostPort(localAddr)
+<span id="L100" class="ln">   100  </span>	require.NoError(t, err)
+<span id="L101" class="ln">   101  </span>	switch config.Network {
+<span id="L102" class="ln">   102  </span>	case netUDP4:
+<span id="L103" class="ln">   103  </span>		localAddr = &#34;127.0.0.1:&#34; + port
+<span id="L104" class="ln">   104  </span>	case netUDP6:
+<span id="L105" class="ln">   105  </span>		localAddr = &#34;[::1]:&#34; + port
+<span id="L106" class="ln">   106  </span>	}
+<span id="L107" class="ln">   107  </span>	return localAddr
+<span id="L108" class="ln">   108  </span>}
+<span id="L109" class="ln">   109  </span>
 </pre><p></p>
 
 <div id="footer">
