--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
@@ -89,7 +89,10 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				
+				<p>
+Package module finds a module&#39;s package path for a given file path.
+</p>
+
 				
 			</div>
 		</div>
