--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
@@ -55,80 +55,92 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package main
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;flag&#34;
-<span id="L5" class="ln">     5  </span>	&#34;fmt&#34;
-<span id="L6" class="ln">     6  </span>	&#34;io&#34;
-<span id="L7" class="ln">     7  </span>	&#34;io/ioutil&#34;
-<span id="L8" class="ln">     8  </span>	&#34;os&#34;
-<span id="L9" class="ln">     9  </span>	&#34;strings&#34;
-<span id="L10" class="ln">    10  </span>	&#34;text/template&#34;
-<span id="L11" class="ln">    11  </span>
-<span id="L12" class="ln">    12  </span>	&#34;github.com/johnstarich/go/gopages/cmd&#34;
-<span id="L13" class="ln">    13  </span>	&#34;github.com/johnstarich/go/gopages/internal/flags&#34;
-<span id="L14" class="ln">    14  </span>	&#34;github.com/pkg/errors&#34;
-<span id="L15" class="ln">    15  </span>)
-<span id="L16" class="ln">    16  </span>
-<span id="L17" class="ln">    17  </span>func main() {
-<span id="L18" class="ln">    18  </span>	templatePath := flag.String(&#34;template&#34;, &#34;&#34;, &#34;Path to the desired doc template file&#34;)
-<span id="L19" class="ln">    19  </span>	outPath := flag.String(&#34;out&#34;, &#34;&#34;, &#34;Output path of completed template&#34;)
-<span id="L20" class="ln">    20  </span>	flag.Parse()
-<span id="L21" class="ln">    21  </span>	if err := run(*templatePath, *outPath); err != nil {
-<span id="L22" class="ln">    22  </span>		fmt.Fprintln(os.Stderr, errors.Wrap(err, &#34;gendoc&#34;).Error())
-<span id="L23" class="ln">    23  </span>		cmd.Exit(1)
-<span id="L24" class="ln">    24  </span>	}
-<span id="L25" class="ln">    25  </span>}
-<span id="L26" class="ln">    26  </span>
-<span id="L27" class="ln">    27  </span>func run(templatePath, outPath string) error {
-<span id="L28" class="ln">    28  </span>	if templatePath == &#34;&#34; || outPath == &#34;&#34; {
-<span id="L29" class="ln">    29  </span>		return errors.New(&#34;Provide doc template and output file paths&#34;)
-<span id="L30" class="ln">    30  </span>	}
-<span id="L31" class="ln">    31  </span>	templateBytes, err := ioutil.ReadFile(templatePath)
-<span id="L32" class="ln">    32  </span>	if err != nil {
-<span id="L33" class="ln">    33  </span>		return err
-<span id="L34" class="ln">    34  </span>	}
-<span id="L35" class="ln">    35  </span>
-<span id="L36" class="ln">    36  </span>	const genDocPerm = 0644
-<span id="L37" class="ln">    37  </span>	f, err := os.OpenFile(outPath, os.O_CREATE|os.O_TRUNC|os.O_WRONLY, genDocPerm)
-<span id="L38" class="ln">    38  </span>	if err != nil {
-<span id="L39" class="ln">    39  </span>		return err
-<span id="L40" class="ln">    40  </span>	}
-<span id="L41" class="ln">    41  </span>	defer f.Close()
-<span id="L42" class="ln">    42  </span>	return genDoc(templateBytes, f)
-<span id="L43" class="ln">    43  </span>}
-<span id="L44" class="ln">    44  </span>
-<span id="L45" class="ln">    45  </span>func genDoc(templateBytes []byte, w io.Writer) error {
-<span id="L46" class="ln">    46  </span>	templateStr := string(templateBytes)
-<span id="L47" class="ln">    47  </span>	templateStr = strings.Replace(templateStr, &#34;\n\npackage main&#34;, &#34;\npackage main&#34;, 1) <span class="comment">// enable the comment for godoc by removing the blank line above &#39;package main&#39;</span>
-<span id="L48" class="ln">    48  </span>
-<span id="L49" class="ln">    49  </span>	tmpl := template.New(&#34;&#34;)
-<span id="L50" class="ln">    50  </span>	tmpl.Funcs(funcMap())
-<span id="L51" class="ln">    51  </span>	docTemplate, err := tmpl.Parse(templateStr)
-<span id="L52" class="ln">    52  </span>	if err != nil {
-<span id="L53" class="ln">    53  </span>		return err
-<span id="L54" class="ln">    54  </span>	}
-<span id="L55" class="ln">    55  </span>
-<span id="L56" class="ln">    56  </span>	_, usageOutput, err := flags.Parse(&#34;-help&#34;)
-<span id="L57" class="ln">    57  </span>	if !errors.Is(err, flag.ErrHelp) {
-<span id="L58" class="ln">    58  </span>		return err
-<span id="L59" class="ln">    59  </span>	}
-<span id="L60" class="ln">    60  </span>
-<span id="L61" class="ln">    61  </span>	return docTemplate.Execute(w, map[string]interface{}{
-<span id="L62" class="ln">    62  </span>		&#34;Usage&#34;: usageOutput,
-<span id="L63" class="ln">    63  </span>	})
-<span id="L64" class="ln">    64  </span>}
-<span id="L65" class="ln">    65  </span>
-<span id="L66" class="ln">    66  </span>func funcMap() template.FuncMap {
-<span id="L67" class="ln">    67  </span>	return map[string]interface{}{
-<span id="L68" class="ln">    68  </span>		&#34;comment&#34;: func(s string) string {
-<span id="L69" class="ln">    69  </span>			return strings.TrimSpace(strings.ReplaceAll(s, &#34;\n&#34;, &#34;\n// &#34;))
-<span id="L70" class="ln">    70  </span>		},
-<span id="L71" class="ln">    71  </span>		&#34;wordWrap&#34;: wordWrapLines,
-<span id="L72" class="ln">    72  </span>	}
-<span id="L73" class="ln">    73  </span>}
-<span id="L74" class="ln">    74  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Command gendoc generates the root package&#39;s documentation.</span>
+<span id="L2" class="ln">     2  </span>package main
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	&#34;bytes&#34;
+<span id="L6" class="ln">     6  </span>	&#34;flag&#34;
+<span id="L7" class="ln">     7  </span>	&#34;fmt&#34;
+<span id="L8" class="ln">     8  </span>	&#34;go/format&#34;
+<span id="L9" class="ln">     9  </span>	&#34;io&#34;
+<span id="L10" class="ln">    10  </span>	&#34;os&#34;
+<span id="L11" class="ln">    11  </span>	&#34;strings&#34;
+<span id="L12" class="ln">    12  </span>	&#34;text/template&#34;
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span>	&#34;github.com/johnstarich/go/gopages/cmd&#34;
+<span id="L15" class="ln">    15  </span>	&#34;github.com/johnstarich/go/gopages/internal/flags&#34;
+<span id="L16" class="ln">    16  </span>	&#34;github.com/pkg/errors&#34;
+<span id="L17" class="ln">    17  </span>)
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span>func main() {
+<span id="L20" class="ln">    20  </span>	templatePath := flag.String(&#34;template&#34;, &#34;&#34;, &#34;Path to the desired doc template file&#34;)
+<span id="L21" class="ln">    21  </span>	outPath := flag.String(&#34;out&#34;, &#34;&#34;, &#34;Output path of completed template&#34;)
+<span id="L22" class="ln">    22  </span>	flag.Parse()
+<span id="L23" class="ln">    23  </span>	if err := run(*templatePath, *outPath); err != nil {
+<span id="L24" class="ln">    24  </span>		fmt.Fprintln(os.Stderr, errors.Wrap(err, &#34;gendoc&#34;).Error())
+<span id="L25" class="ln">    25  </span>		cmd.Exit(1)
+<span id="L26" class="ln">    26  </span>	}
+<span id="L27" class="ln">    27  </span>}
+<span id="L28" class="ln">    28  </span>
+<span id="L29" class="ln">    29  </span>func run(templatePath, outPath string) error {
+<span id="L30" class="ln">    30  </span>	if templatePath == &#34;&#34; || outPath == &#34;&#34; {
+<span id="L31" class="ln">    31  </span>		return errors.New(&#34;Provide doc template and output file paths&#34;)
+<span id="L32" class="ln">    32  </span>	}
+<span id="L33" class="ln">    33  </span>	templateBytes, err := os.ReadFile(templatePath)
+<span id="L34" class="ln">    34  </span>	if err != nil {
+<span id="L35" class="ln">    35  </span>		return err
+<span id="L36" class="ln">    36  </span>	}
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>	const genDocPerm = 0644
+<span id="L39" class="ln">    39  </span>	f, err := os.OpenFile(outPath, os.O_CREATE|os.O_TRUNC|os.O_WRONLY, genDocPerm)
+<span id="L40" class="ln">    40  </span>	if err != nil {
+<span id="L41" class="ln">    41  </span>		return err
+<span id="L42" class="ln">    42  </span>	}
+<span id="L43" class="ln">    43  </span>	defer f.Close()
+<span id="L44" class="ln">    44  </span>	return genDoc(templateBytes, f)
+<span id="L45" class="ln">    45  </span>}
+<span id="L46" class="ln">    46  </span>
+<span id="L47" class="ln">    47  </span>func genDoc(templateBytes []byte, w io.Writer) error {
+<span id="L48" class="ln">    48  </span>	templateStr := string(templateBytes)
+<span id="L49" class="ln">    49  </span>	templateStr = strings.Replace(templateStr, &#34;\n\npackage main&#34;, &#34;\npackage main&#34;, 1) <span class="comment">// enable the comment for godoc by removing the blank line above &#39;package main&#39;</span>
+<span id="L50" class="ln">    50  </span>
+<span id="L51" class="ln">    51  </span>	tmpl := template.New(&#34;&#34;)
+<span id="L52" class="ln">    52  </span>	tmpl.Funcs(funcMap())
+<span id="L53" class="ln">    53  </span>	docTemplate, err := tmpl.Parse(templateStr)
+<span id="L54" class="ln">    54  </span>	if err != nil {
+<span id="L55" class="ln">    55  </span>		return err
+<span id="L56" class="ln">    56  </span>	}
+<span id="L57" class="ln">    57  </span>
+<span id="L58" class="ln">    58  </span>	_, usageOutput, err := flags.Parse(&#34;-help&#34;)
+<span id="L59" class="ln">    59  </span>	if !errors.Is(err, flag.ErrHelp) {
+<span id="L60" class="ln">    60  </span>		return err
+<span id="L61" class="ln">    61  </span>	}
+<span id="L62" class="ln">    62  </span>
+<span id="L63" class="ln">    63  </span>	var doc bytes.Buffer
+<span id="L64" class="ln">    64  </span>	err = docTemplate.Execute(&amp;doc, map[string]interface{}{
+<span id="L65" class="ln">    65  </span>		&#34;Usage&#34;: usageOutput,
+<span id="L66" class="ln">    66  </span>	})
+<span id="L67" class="ln">    67  </span>	if err != nil {
+<span id="L68" class="ln">    68  </span>		return err
+<span id="L69" class="ln">    69  </span>	}
+<span id="L70" class="ln">    70  </span>	formattedDoc, err := format.Source(doc.Bytes())
+<span id="L71" class="ln">    71  </span>	if err != nil {
+<span id="L72" class="ln">    72  </span>		return err
+<span id="L73" class="ln">    73  </span>	}
+<span id="L74" class="ln">    74  </span>	_, err = w.Write(formattedDoc)
+<span id="L75" class="ln">    75  </span>	return err
+<span id="L76" class="ln">    76  </span>}
+<span id="L77" class="ln">    77  </span>
+<span id="L78" class="ln">    78  </span>func funcMap() template.FuncMap {
+<span id="L79" class="ln">    79  </span>	return map[string]interface{}{
+<span id="L80" class="ln">    80  </span>		&#34;comment&#34;: func(s string) string {
+<span id="L81" class="ln">    81  </span>			return strings.TrimSpace(strings.ReplaceAll(s, &#34;\n&#34;, &#34;\n// &#34;))
+<span id="L82" class="ln">    82  </span>		},
+<span id="L83" class="ln">    83  </span>		&#34;wordWrap&#34;: wordWrapLines,
+<span id="L84" class="ln">    84  </span>	}
+<span id="L85" class="ln">    85  </span>}
+<span id="L86" class="ln">    86  </span>
 </pre><p></p>
 
 <div id="footer">
