--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/watch/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/watch/main.go.html
@@ -146,104 +146,105 @@
 <span id="L89" class="ln">    89  </span>	})
 <span id="L90" class="ln">    90  </span>
 <span id="L91" class="ln">    91  </span>	server := http.Server{
-<span id="L92" class="ln">    92  </span>		Addr:    &#34;:8080&#34;,
-<span id="L93" class="ln">    93  </span>		Handler: mux,
-<span id="L94" class="ln">    94  </span>	}
-<span id="L95" class="ln">    95  </span>	fmt.Println(&#34;Starting demo server on :8080...&#34;)
-<span id="L96" class="ln">    96  </span>	_ = server.ListenAndServe()
-<span id="L97" class="ln">    97  </span>}
-<span id="L98" class="ln">    98  </span>
-<span id="L99" class="ln">    99  </span>type pagesFSArgs struct {
-<span id="L100" class="ln">   100  </span>	flags.Args
-<span id="L101" class="ln">   101  </span>	Ctx        context.Context
-<span id="L102" class="ln">   102  </span>	ModulePath string
-<span id="L103" class="ln">   103  </span>	UpdateTime *string
-<span id="L104" class="ln">   104  </span>	Linker     source.Linker
-<span id="L105" class="ln">   105  </span>}
-<span id="L106" class="ln">   106  </span>
-<span id="L107" class="ln">   107  </span>var pagesFSPipe = pipe.New(pipe.Options{}).
-<span id="L108" class="ln">   108  </span>	Append(func(args []interface{}) pagesFSArgs {
-<span id="L109" class="ln">   109  </span>		return args[0].(pagesFSArgs)
-<span id="L110" class="ln">   110  </span>	}).
-<span id="L111" class="ln">   111  </span>	Append(func(args pagesFSArgs) (pagesFSArgs, string, error) {
-<span id="L112" class="ln">   112  </span>		modulePackage, err := module.Package(args.ModulePath)
-<span id="L113" class="ln">   113  </span>		return args, modulePackage, err
-<span id="L114" class="ln">   114  </span>	}).
-<span id="L115" class="ln">   115  </span>	Append(func(args pagesFSArgs, modulePackage string) (pagesFSArgs, billy.Filesystem, error) {
-<span id="L116" class="ln">   116  </span>		src := osfs.New(&#34;&#34;)
-<span id="L117" class="ln">   117  </span>		fs := memfs.New()
-<span id="L118" class="ln">   118  </span>		err := watch(args.Ctx, args.ModulePath, func() error {
-<span id="L119" class="ln">   119  </span>			err := generate.Docs(args.ModulePath, modulePackage, src, fs, args.Args, args.Linker)
-<span id="L120" class="ln">   120  </span>			*args.UpdateTime = time.Now().Format(time.RFC3339)
-<span id="L121" class="ln">   121  </span>			return err
-<span id="L122" class="ln">   122  </span>		})
-<span id="L123" class="ln">   123  </span>		return args, fs, err
-<span id="L124" class="ln">   124  </span>	}).
-<span id="L125" class="ln">   125  </span>	Append(func(args pagesFSArgs, fs billy.Filesystem) (http.FileSystem, error) {
-<span id="L126" class="ln">   126  </span>		rootedFS, err := fs.Chroot(args.OutputPath)
-<span id="L127" class="ln">   127  </span>		return &amp;httpFSWrapper{base: args.BaseURL, Filesystem: rootedFS}, err
-<span id="L128" class="ln">   128  </span>	})
-<span id="L129" class="ln">   129  </span>
-<span id="L130" class="ln">   130  </span>func pagesFileSystem(ctx context.Context, modulePath string, updateTime *string, args flags.Args, linker source.Linker) (http.FileSystem, error) {
-<span id="L131" class="ln">   131  </span>	out, err := pagesFSPipe.Do(pagesFSArgs{
-<span id="L132" class="ln">   132  </span>		Args:       args,
-<span id="L133" class="ln">   133  </span>		Ctx:        ctx,
-<span id="L134" class="ln">   134  </span>		ModulePath: modulePath,
-<span id="L135" class="ln">   135  </span>		UpdateTime: updateTime,
-<span id="L136" class="ln">   136  </span>		Linker:     linker,
-<span id="L137" class="ln">   137  </span>	})
-<span id="L138" class="ln">   138  </span>	var fs http.FileSystem
-<span id="L139" class="ln">   139  </span>	if err == nil {
-<span id="L140" class="ln">   140  </span>		fs = out[0].(http.FileSystem)
-<span id="L141" class="ln">   141  </span>	}
-<span id="L142" class="ln">   142  </span>	return fs, err
-<span id="L143" class="ln">   143  </span>}
-<span id="L144" class="ln">   144  </span>
-<span id="L145" class="ln">   145  </span>type httpFSWrapper struct {
-<span id="L146" class="ln">   146  </span>	base string
-<span id="L147" class="ln">   147  </span>	billy.Filesystem
-<span id="L148" class="ln">   148  </span>}
-<span id="L149" class="ln">   149  </span>
-<span id="L150" class="ln">   150  </span>func (h *httpFSWrapper) Open(name string) (http.File, error) {
-<span id="L151" class="ln">   151  </span>	if !strings.HasPrefix(name, h.base) {
-<span id="L152" class="ln">   152  </span>		return nil, os.ErrNotExist
-<span id="L153" class="ln">   153  </span>	}
-<span id="L154" class="ln">   154  </span>	name = strings.TrimPrefix(name, h.base)
-<span id="L155" class="ln">   155  </span>	name = filepath.FromSlash(name)
-<span id="L156" class="ln">   156  </span>	info, err := h.Filesystem.Stat(name)
-<span id="L157" class="ln">   157  </span>	if err != nil {
-<span id="L158" class="ln">   158  </span>		return nil, err
-<span id="L159" class="ln">   159  </span>	}
-<span id="L160" class="ln">   160  </span>
-<span id="L161" class="ln">   161  </span>	var file billy.File
-<span id="L162" class="ln">   162  </span>	<span class="comment">// memfs.Open doesn&#39;t work for directories, so create a false dir for those instead</span>
-<span id="L163" class="ln">   163  </span>	if info.IsDir() {
-<span id="L164" class="ln">   164  </span>		file, err = memfs.New().Create(name)
-<span id="L165" class="ln">   165  </span>	} else {
-<span id="L166" class="ln">   166  </span>		file, err = h.Filesystem.Open(name)
-<span id="L167" class="ln">   167  </span>	}
-<span id="L168" class="ln">   168  </span>	return &amp;httpFileWrapper{
-<span id="L169" class="ln">   169  </span>		File: file,
-<span id="L170" class="ln">   170  </span>		fs:   h.Filesystem,
-<span id="L171" class="ln">   171  </span>		name: name,
-<span id="L172" class="ln">   172  </span>	}, err
-<span id="L173" class="ln">   173  </span>}
-<span id="L174" class="ln">   174  </span>
-<span id="L175" class="ln">   175  </span>type httpFileWrapper struct {
-<span id="L176" class="ln">   176  </span>	billy.File
-<span id="L177" class="ln">   177  </span>
-<span id="L178" class="ln">   178  </span>	name string
-<span id="L179" class="ln">   179  </span>	fs   billy.Filesystem
-<span id="L180" class="ln">   180  </span>}
-<span id="L181" class="ln">   181  </span>
-<span id="L182" class="ln">   182  </span>func (h *httpFileWrapper) Readdir(count int) ([]os.FileInfo, error) {
-<span id="L183" class="ln">   183  </span>	return h.fs.ReadDir(h.name)
-<span id="L184" class="ln">   184  </span>}
-<span id="L185" class="ln">   185  </span>
-<span id="L186" class="ln">   186  </span>func (h *httpFileWrapper) Stat() (os.FileInfo, error) {
-<span id="L187" class="ln">   187  </span>	return h.fs.Stat(h.name)
-<span id="L188" class="ln">   188  </span>}
-<span id="L189" class="ln">   189  </span>
+<span id="L92" class="ln">    92  </span>		Addr:              &#34;:8080&#34;,
+<span id="L93" class="ln">    93  </span>		Handler:           mux,
+<span id="L94" class="ln">    94  </span>		ReadHeaderTimeout: time.Minute,
+<span id="L95" class="ln">    95  </span>	}
+<span id="L96" class="ln">    96  </span>	fmt.Println(&#34;Starting demo server on :8080...&#34;)
+<span id="L97" class="ln">    97  </span>	_ = server.ListenAndServe()
+<span id="L98" class="ln">    98  </span>}
+<span id="L99" class="ln">    99  </span>
+<span id="L100" class="ln">   100  </span>type pagesFSArgs struct {
+<span id="L101" class="ln">   101  </span>	flags.Args
+<span id="L102" class="ln">   102  </span>	Ctx        context.Context
+<span id="L103" class="ln">   103  </span>	ModulePath string
+<span id="L104" class="ln">   104  </span>	UpdateTime *string
+<span id="L105" class="ln">   105  </span>	Linker     source.Linker
+<span id="L106" class="ln">   106  </span>}
+<span id="L107" class="ln">   107  </span>
+<span id="L108" class="ln">   108  </span>var pagesFSPipe = pipe.New(pipe.Options{}).
+<span id="L109" class="ln">   109  </span>	Append(func(args []interface{}) pagesFSArgs {
+<span id="L110" class="ln">   110  </span>		return args[0].(pagesFSArgs)
+<span id="L111" class="ln">   111  </span>	}).
+<span id="L112" class="ln">   112  </span>	Append(func(args pagesFSArgs) (pagesFSArgs, string, error) {
+<span id="L113" class="ln">   113  </span>		modulePackage, err := module.Package(args.ModulePath)
+<span id="L114" class="ln">   114  </span>		return args, modulePackage, err
+<span id="L115" class="ln">   115  </span>	}).
+<span id="L116" class="ln">   116  </span>	Append(func(args pagesFSArgs, modulePackage string) (pagesFSArgs, billy.Filesystem, error) {
+<span id="L117" class="ln">   117  </span>		src := osfs.New(&#34;&#34;)
+<span id="L118" class="ln">   118  </span>		fs := memfs.New()
+<span id="L119" class="ln">   119  </span>		err := watch(args.Ctx, args.ModulePath, func() error {
+<span id="L120" class="ln">   120  </span>			err := generate.Docs(args.ModulePath, modulePackage, src, fs, args.Args, args.Linker)
+<span id="L121" class="ln">   121  </span>			*args.UpdateTime = time.Now().Format(time.RFC3339)
+<span id="L122" class="ln">   122  </span>			return err
+<span id="L123" class="ln">   123  </span>		})
+<span id="L124" class="ln">   124  </span>		return args, fs, err
+<span id="L125" class="ln">   125  </span>	}).
+<span id="L126" class="ln">   126  </span>	Append(func(args pagesFSArgs, fs billy.Filesystem) (http.FileSystem, error) {
+<span id="L127" class="ln">   127  </span>		rootedFS, err := fs.Chroot(args.OutputPath)
+<span id="L128" class="ln">   128  </span>		return &amp;httpFSWrapper{base: args.BaseURL, Filesystem: rootedFS}, err
+<span id="L129" class="ln">   129  </span>	})
+<span id="L130" class="ln">   130  </span>
+<span id="L131" class="ln">   131  </span>func pagesFileSystem(ctx context.Context, modulePath string, updateTime *string, args flags.Args, linker source.Linker) (http.FileSystem, error) {
+<span id="L132" class="ln">   132  </span>	out, err := pagesFSPipe.Do(pagesFSArgs{
+<span id="L133" class="ln">   133  </span>		Args:       args,
+<span id="L134" class="ln">   134  </span>		Ctx:        ctx,
+<span id="L135" class="ln">   135  </span>		ModulePath: modulePath,
+<span id="L136" class="ln">   136  </span>		UpdateTime: updateTime,
+<span id="L137" class="ln">   137  </span>		Linker:     linker,
+<span id="L138" class="ln">   138  </span>	})
+<span id="L139" class="ln">   139  </span>	var fs http.FileSystem
+<span id="L140" class="ln">   140  </span>	if err == nil {
+<span id="L141" class="ln">   141  </span>		fs = out[0].(http.FileSystem)
+<span id="L142" class="ln">   142  </span>	}
+<span id="L143" class="ln">   143  </span>	return fs, err
+<span id="L144" class="ln">   144  </span>}
+<span id="L145" class="ln">   145  </span>
+<span id="L146" class="ln">   146  </span>type httpFSWrapper struct {
+<span id="L147" class="ln">   147  </span>	base string
+<span id="L148" class="ln">   148  </span>	billy.Filesystem
+<span id="L149" class="ln">   149  </span>}
+<span id="L150" class="ln">   150  </span>
+<span id="L151" class="ln">   151  </span>func (h *httpFSWrapper) Open(name string) (http.File, error) {
+<span id="L152" class="ln">   152  </span>	if !strings.HasPrefix(name, h.base) {
+<span id="L153" class="ln">   153  </span>		return nil, os.ErrNotExist
+<span id="L154" class="ln">   154  </span>	}
+<span id="L155" class="ln">   155  </span>	name = strings.TrimPrefix(name, h.base)
+<span id="L156" class="ln">   156  </span>	name = filepath.FromSlash(name)
+<span id="L157" class="ln">   157  </span>	info, err := h.Filesystem.Stat(name)
+<span id="L158" class="ln">   158  </span>	if err != nil {
+<span id="L159" class="ln">   159  </span>		return nil, err
+<span id="L160" class="ln">   160  </span>	}
+<span id="L161" class="ln">   161  </span>
+<span id="L162" class="ln">   162  </span>	var file billy.File
+<span id="L163" class="ln">   163  </span>	<span class="comment">// memfs.Open doesn&#39;t work for directories, so create a false dir for those instead</span>
+<span id="L164" class="ln">   164  </span>	if info.IsDir() {
+<span id="L165" class="ln">   165  </span>		file, err = memfs.New().Create(name)
+<span id="L166" class="ln">   166  </span>	} else {
+<span id="L167" class="ln">   167  </span>		file, err = h.Filesystem.Open(name)
+<span id="L168" class="ln">   168  </span>	}
+<span id="L169" class="ln">   169  </span>	return &amp;httpFileWrapper{
+<span id="L170" class="ln">   170  </span>		File: file,
+<span id="L171" class="ln">   171  </span>		fs:   h.Filesystem,
+<span id="L172" class="ln">   172  </span>		name: name,
+<span id="L173" class="ln">   173  </span>	}, err
+<span id="L174" class="ln">   174  </span>}
+<span id="L175" class="ln">   175  </span>
+<span id="L176" class="ln">   176  </span>type httpFileWrapper struct {
+<span id="L177" class="ln">   177  </span>	billy.File
+<span id="L178" class="ln">   178  </span>
+<span id="L179" class="ln">   179  </span>	name string
+<span id="L180" class="ln">   180  </span>	fs   billy.Filesystem
+<span id="L181" class="ln">   181  </span>}
+<span id="L182" class="ln">   182  </span>
+<span id="L183" class="ln">   183  </span>func (h *httpFileWrapper) Readdir(count int) ([]os.FileInfo, error) {
+<span id="L184" class="ln">   184  </span>	return h.fs.ReadDir(h.name)
+<span id="L185" class="ln">   185  </span>}
+<span id="L186" class="ln">   186  </span>
+<span id="L187" class="ln">   187  </span>func (h *httpFileWrapper) Stat() (os.FileInfo, error) {
+<span id="L188" class="ln">   188  </span>	return h.fs.Stat(h.name)
+<span id="L189" class="ln">   189  </span>}
+<span id="L190" class="ln">   190  </span>
 </pre><p></p>
 
 <div id="footer">
