--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
@@ -59,7 +59,7 @@
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import (
 <span id="L4" class="ln">     4  </span>	&#34;flag&#34;
-<span id="L5" class="ln">     5  </span>	&#34;io/ioutil&#34;
+<span id="L5" class="ln">     5  </span>	&#34;os&#34;
 <span id="L6" class="ln">     6  </span>	&#34;path/filepath&#34;
 <span id="L7" class="ln">     7  </span>	&#34;testing&#34;
 <span id="L8" class="ln">     8  </span>
@@ -70,7 +70,7 @@
 <span id="L13" class="ln">    13  </span>func testFile(t *testing.T, contents string) string {
 <span id="L14" class="ln">    14  </span>	t.Helper()
 <span id="L15" class="ln">    15  </span>	p := filepath.Join(t.TempDir(), &#34;file&#34;)
-<span id="L16" class="ln">    16  </span>	err := ioutil.WriteFile(p, []byte(contents), 0600)
+<span id="L16" class="ln">    16  </span>	err := os.WriteFile(p, []byte(contents), 0600)
 <span id="L17" class="ln">    17  </span>	if err != nil {
 <span id="L18" class="ln">    18  </span>		t.Fatal(err)
 <span id="L19" class="ln">    19  </span>	}
