--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate_test.go.html
@@ -58,7 +58,7 @@
 <pre><span id="L1" class="ln">     1  </span>package generate
 <span id="L2" class="ln">     2  </span>
 <span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;io/ioutil&#34;
+<span id="L4" class="ln">     4  </span>	&#34;io&#34;
 <span id="L5" class="ln">     5  </span>	&#34;os&#34;
 <span id="L6" class="ln">     6  </span>	&#34;path/filepath&#34;
 <span id="L7" class="ln">     7  </span>	&#34;sort&#34;
@@ -72,9 +72,9 @@
 <span id="L15" class="ln">    15  </span>	&#34;github.com/stretchr/testify/require&#34;
 <span id="L16" class="ln">    16  </span>)
 <span id="L17" class="ln">    17  </span>
-<span id="L18" class="ln">    18  </span>func TestGenerateDocs(t *testing.T) { <span class="comment">// nolint:paralleltest // TODO: Remove chdir, use a io/fs.FS implementation to work around billy&#39;s limitations.</span>
+<span id="L18" class="ln">    18  </span>func TestGenerateDocs(t *testing.T) { <span class="comment">//nolint:paralleltest // TODO: Remove chdir, use a io/fs.FS implementation to work around billy&#39;s limitations.</span>
 <span id="L19" class="ln">    19  </span>	<span class="comment">// create a new package &#34;thing&#34; and generate docs for it</span>
-<span id="L20" class="ln">    20  </span>	thing, err := ioutil.TempDir(&#34;&#34;, &#34;&#34;)
+<span id="L20" class="ln">    20  </span>	thing, err := os.MkdirTemp(&#34;&#34;, &#34;&#34;)
 <span id="L21" class="ln">    21  </span>	require.NoError(t, err)
 <span id="L22" class="ln">    22  </span>	defer os.RemoveAll(thing)
 <span id="L23" class="ln">    23  </span>	wd, err := os.Getwd()
@@ -90,7 +90,7 @@
 <span id="L33" class="ln">    33  </span>		path = filepath.Join(thing, path)
 <span id="L34" class="ln">    34  </span>		err := os.MkdirAll(filepath.Dir(path), 0700)
 <span id="L35" class="ln">    35  </span>		require.NoError(t, err)
-<span id="L36" class="ln">    36  </span>		err = ioutil.WriteFile(path, []byte(contents), 0600)
+<span id="L36" class="ln">    36  </span>		err = os.WriteFile(path, []byte(contents), 0600)
 <span id="L37" class="ln">    37  </span>		require.NoError(t, err)
 <span id="L38" class="ln">    38  </span>	}
 <span id="L39" class="ln">    39  </span>
@@ -160,7 +160,7 @@
 <span id="L103" class="ln">   103  </span>
 <span id="L104" class="ln">   104  </span>	f, err := outputFS.Open(&#34;pkg/github.com/my/thing/index.html&#34;)
 <span id="L105" class="ln">   105  </span>	require.NoError(t, err)
-<span id="L106" class="ln">   106  </span>	indexContents, err := ioutil.ReadAll(f)
+<span id="L106" class="ln">   106  </span>	indexContents, err := io.ReadAll(f)
 <span id="L107" class="ln">   107  </span>	require.NoError(t, err)
 <span id="L108" class="ln">   108  </span>	assert.Contains(t, string(indexContents), &#34;mylib&#34;)
 <span id="L109" class="ln">   109  </span>}
