--- a/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html
@@ -55,10 +55,10 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package module
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;io/ioutil&#34;
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package module finds a module&#39;s package path for a given file path.</span>
+<span id="L2" class="ln">     2  </span>package module
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
 <span id="L5" class="ln">     5  </span>	&#34;os&#34;
 <span id="L6" class="ln">     6  </span>	&#34;path/filepath&#34;
 <span id="L7" class="ln">     7  </span>
@@ -77,7 +77,7 @@
 <span id="L20" class="ln">    20  </span>		return goMod, pipe.CheckErrorf(os.IsNotExist(err), &#34;go.mod not found in the current directory&#34;)
 <span id="L21" class="ln">    21  </span>	}).
 <span id="L22" class="ln">    22  </span>	Append(func(goMod string) (string, string, error) {
-<span id="L23" class="ln">    23  </span>		buf, err := ioutil.ReadFile(goMod)
+<span id="L23" class="ln">    23  </span>		buf, err := os.ReadFile(goMod)
 <span id="L24" class="ln">    24  </span>		modulePackage := modfile.ModulePath(buf)
 <span id="L25" class="ln">    25  </span>		return goMod, modulePackage, err
 <span id="L26" class="ln">    26  </span>	}).
