--- a/regext/pkg/github.com/johnstarich/go/index.html
+++ b/regext/pkg/github.com/johnstarich/go/index.html
@@ -91,7 +91,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package regext enables extended regex, where spaces are ignored and inline comments are supported.
 					</td>
 				</tr>
 			
