--- a/regext/pkg/github.com/index.html
+++ b/regext/pkg/github.com/index.html
@@ -113,7 +113,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						
+						Package regext enables extended regex, where spaces are ignored and inline comments are supported.
 					</td>
 				</tr>
 			
