--- a/regext/src/github.com/johnstarich/go/regext/extended.go.html
+++ b/regext/src/github.com/johnstarich/go/regext/extended.go.html
@@ -55,46 +55,47 @@
 
 
 <script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package regext
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;regexp&#34;
-<span id="L5" class="ln">     5  </span>	&#34;strings&#34;
-<span id="L6" class="ln">     6  </span>)
-<span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>var (
-<span id="L9" class="ln">     9  </span>	whitespaceRe = regexp.MustCompile(`\s+`)
-<span id="L10" class="ln">    10  </span>	commentsRe   = regexp.MustCompile(`(?:\\#|[^#])*`)
-<span id="L11" class="ln">    11  </span>)
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span><span class="comment">// MustCompile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
-<span id="L14" class="ln">    14  </span>func MustCompile(expr string) *regexp.Regexp {
-<span id="L15" class="ln">    15  </span>	return regexp.MustCompile(extendedRegexp(expr))
-<span id="L16" class="ln">    16  </span>}
-<span id="L17" class="ln">    17  </span>
-<span id="L18" class="ln">    18  </span><span class="comment">// Compile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
-<span id="L19" class="ln">    19  </span>func Compile(expr string) (*regexp.Regexp, error) {
-<span id="L20" class="ln">    20  </span>	return regexp.Compile(extendedRegexp(expr))
-<span id="L21" class="ln">    21  </span>}
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>func extendedRegexp(expr string) string {
-<span id="L24" class="ln">    24  </span>	expr = removeComments(expr)
-<span id="L25" class="ln">    25  </span>	expr = removeWhitespace(expr)
-<span id="L26" class="ln">    26  </span>	return expr
-<span id="L27" class="ln">    27  </span>}
-<span id="L28" class="ln">    28  </span>
-<span id="L29" class="ln">    29  </span>func removeComments(expr string) string {
-<span id="L30" class="ln">    30  </span>	lines := strings.Split(expr, &#34;\n&#34;)
-<span id="L31" class="ln">    31  </span>	for i := range lines {
-<span id="L32" class="ln">    32  </span>		lines[i] = commentsRe.FindStringSubmatch(lines[i])[0]
-<span id="L33" class="ln">    33  </span>	}
-<span id="L34" class="ln">    34  </span>	return strings.Join(lines, &#34;\n&#34;)
-<span id="L35" class="ln">    35  </span>}
-<span id="L36" class="ln">    36  </span>
-<span id="L37" class="ln">    37  </span>func removeWhitespace(expr string) string {
-<span id="L38" class="ln">    38  </span>	return strings.Join(whitespaceRe.Split(expr, -1), &#34;&#34;)
-<span id="L39" class="ln">    39  </span>}
-<span id="L40" class="ln">    40  </span>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package regext enables extended regex, where spaces are ignored and inline comments are supported.</span>
+<span id="L2" class="ln">     2  </span>package regext
+<span id="L3" class="ln">     3  </span>
+<span id="L4" class="ln">     4  </span>import (
+<span id="L5" class="ln">     5  </span>	&#34;regexp&#34;
+<span id="L6" class="ln">     6  </span>	&#34;strings&#34;
+<span id="L7" class="ln">     7  </span>)
+<span id="L8" class="ln">     8  </span>
+<span id="L9" class="ln">     9  </span>var (
+<span id="L10" class="ln">    10  </span>	whitespaceRe = regexp.MustCompile(`\s+`)
+<span id="L11" class="ln">    11  </span>	commentsRe   = regexp.MustCompile(`(?:\\#|[^#])*`)
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span><span class="comment">// MustCompile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
+<span id="L15" class="ln">    15  </span>func MustCompile(expr string) *regexp.Regexp {
+<span id="L16" class="ln">    16  </span>	return regexp.MustCompile(extendedRegexp(expr))
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span><span class="comment">// Compile compiles expr as a regular expression in a Perl-like &#34;extended&#34; mode where whitespace characters and comments are ignored</span>
+<span id="L20" class="ln">    20  </span>func Compile(expr string) (*regexp.Regexp, error) {
+<span id="L21" class="ln">    21  </span>	return regexp.Compile(extendedRegexp(expr))
+<span id="L22" class="ln">    22  </span>}
+<span id="L23" class="ln">    23  </span>
+<span id="L24" class="ln">    24  </span>func extendedRegexp(expr string) string {
+<span id="L25" class="ln">    25  </span>	expr = removeComments(expr)
+<span id="L26" class="ln">    26  </span>	expr = removeWhitespace(expr)
+<span id="L27" class="ln">    27  </span>	return expr
+<span id="L28" class="ln">    28  </span>}
+<span id="L29" class="ln">    29  </span>
+<span id="L30" class="ln">    30  </span>func removeComments(expr string) string {
+<span id="L31" class="ln">    31  </span>	lines := strings.Split(expr, &#34;\n&#34;)
+<span id="L32" class="ln">    32  </span>	for i := range lines {
+<span id="L33" class="ln">    33  </span>		lines[i] = commentsRe.FindStringSubmatch(lines[i])[0]
+<span id="L34" class="ln">    34  </span>	}
+<span id="L35" class="ln">    35  </span>	return strings.Join(lines, &#34;\n&#34;)
+<span id="L36" class="ln">    36  </span>}
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>func removeWhitespace(expr string) string {
+<span id="L39" class="ln">    39  </span>	return strings.Join(whitespaceRe.Split(expr, -1), &#34;&#34;)
+<span id="L40" class="ln">    40  </span>}
+<span id="L41" class="ln">    41  </span>
 </pre><p></p>
 
 <div id="footer">
