--- a/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath.go.html
@@ -59,56 +59,89 @@
 <span id="L2" class="ln">     2  </span>package fspath
 <span id="L3" class="ln">     3  </span>
 <span id="L4" class="ln">     4  </span>import (
-<span id="L5" class="ln">     5  </span>	&#34;path&#34;
-<span id="L6" class="ln">     6  </span>	&#34;strings&#34;
-<span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>	&#34;github.com/pkg/errors&#34;
-<span id="L9" class="ln">     9  </span>)
+<span id="L5" class="ln">     5  </span>	goOS &#34;os&#34;
+<span id="L6" class="ln">     6  </span>	&#34;path&#34;
+<span id="L7" class="ln">     7  </span>	&#34;path/filepath&#34;
+<span id="L8" class="ln">     8  </span>	&#34;runtime&#34;
+<span id="L9" class="ln">     9  </span>	&#34;strings&#34;
 <span id="L10" class="ln">    10  </span>
-<span id="L11" class="ln">    11  </span>const separator = &#34;/&#34;
-<span id="L12" class="ln">    12  </span>
-<span id="L13" class="ln">    13  </span><span class="comment">// CommonBase returns the common base path between a and b.</span>
-<span id="L14" class="ln">    14  </span><span class="comment">// Returns &#34;.&#34; if there are no common path elements.</span>
-<span id="L15" class="ln">    15  </span>func CommonBase(a, b string) string {
-<span id="L16" class="ln">    16  </span>	a = path.Clean(a)
-<span id="L17" class="ln">    17  </span>	b = path.Clean(b)
-<span id="L18" class="ln">    18  </span>	i := 0
-<span id="L19" class="ln">    19  </span>	for ; i &lt; len(a) &amp;&amp; i &lt; len(b); i++ {
-<span id="L20" class="ln">    20  </span>		if a[i] != b[i] {
-<span id="L21" class="ln">    21  </span>			break
-<span id="L22" class="ln">    22  </span>		}
-<span id="L23" class="ln">    23  </span>	}
-<span id="L24" class="ln">    24  </span>	return path.Clean(a[:i])
-<span id="L25" class="ln">    25  </span>}
-<span id="L26" class="ln">    26  </span>
-<span id="L27" class="ln">    27  </span><span class="comment">// Rel returns the relative FS path from basePath to targetPath.</span>
-<span id="L28" class="ln">    28  </span><span class="comment">// Similar to filepath.Rel without including OS-dependent behavior.</span>
-<span id="L29" class="ln">    29  </span>func Rel(basePath, targetPath string) (string, error) {
-<span id="L30" class="ln">    30  </span>	basePath = path.Clean(basePath)
-<span id="L31" class="ln">    31  </span>	targetPath = path.Clean(targetPath)
-<span id="L32" class="ln">    32  </span>
-<span id="L33" class="ln">    33  </span>	common := CommonBase(basePath, targetPath)
-<span id="L34" class="ln">    34  </span>	if common == &#34;&#34; {
-<span id="L35" class="ln">    35  </span>		return &#34;&#34;, errors.New(&#34;could not make relative path between basePath and targetPath&#34;)
-<span id="L36" class="ln">    36  </span>	}
-<span id="L37" class="ln">    37  </span>	base := basePath
-<span id="L38" class="ln">    38  </span>	base = strings.TrimPrefix(base, common)
-<span id="L39" class="ln">    39  </span>	base = strings.TrimPrefix(base, separator)
-<span id="L40" class="ln">    40  </span>	target := targetPath
-<span id="L41" class="ln">    41  </span>	target = strings.TrimPrefix(target, common)
-<span id="L42" class="ln">    42  </span>	target = strings.TrimPrefix(target, separator)
-<span id="L43" class="ln">    43  </span>
-<span id="L44" class="ln">    44  </span>	switch {
-<span id="L45" class="ln">    45  </span>	case base == &#34;&#34; &amp;&amp; target == &#34;&#34;:
-<span id="L46" class="ln">    46  </span>		return &#34;.&#34;, nil
-<span id="L47" class="ln">    47  </span>	case base == &#34;&#34;:
-<span id="L48" class="ln">    48  </span>		return target, nil
-<span id="L49" class="ln">    49  </span>	default:
-<span id="L50" class="ln">    50  </span>		p := strings.Repeat(&#34;../&#34;, strings.Count(base, separator)+1)
-<span id="L51" class="ln">    51  </span>		return path.Join(p, target), nil
-<span id="L52" class="ln">    52  </span>	}
-<span id="L53" class="ln">    53  </span>}
-<span id="L54" class="ln">    54  </span>
+<span id="L11" class="ln">    11  </span>	&#34;github.com/hack-pad/hackpadfs&#34;
+<span id="L12" class="ln">    12  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
+<span id="L13" class="ln">    13  </span>	&#34;github.com/pkg/errors&#34;
+<span id="L14" class="ln">    14  </span>)
+<span id="L15" class="ln">    15  </span>
+<span id="L16" class="ln">    16  </span>const separator = &#34;/&#34;
+<span id="L17" class="ln">    17  </span>
+<span id="L18" class="ln">    18  </span><span class="comment">// CommonBase returns the common base path between a and b.</span>
+<span id="L19" class="ln">    19  </span><span class="comment">// Returns &#34;.&#34; if there are no common path elements.</span>
+<span id="L20" class="ln">    20  </span>func CommonBase(a, b string) string {
+<span id="L21" class="ln">    21  </span>	a = path.Clean(a)
+<span id="L22" class="ln">    22  </span>	b = path.Clean(b)
+<span id="L23" class="ln">    23  </span>	i := 0
+<span id="L24" class="ln">    24  </span>	for ; i &lt; len(a) &amp;&amp; i &lt; len(b); i++ {
+<span id="L25" class="ln">    25  </span>		if a[i] != b[i] {
+<span id="L26" class="ln">    26  </span>			break
+<span id="L27" class="ln">    27  </span>		}
+<span id="L28" class="ln">    28  </span>	}
+<span id="L29" class="ln">    29  </span>	return path.Clean(a[:i])
+<span id="L30" class="ln">    30  </span>}
+<span id="L31" class="ln">    31  </span>
+<span id="L32" class="ln">    32  </span><span class="comment">// Rel returns the relative FS path from basePath to targetPath.</span>
+<span id="L33" class="ln">    33  </span><span class="comment">// Similar to filepath.Rel without including OS-dependent behavior.</span>
+<span id="L34" class="ln">    34  </span>func Rel(basePath, targetPath string) (string, error) {
+<span id="L35" class="ln">    35  </span>	basePath = path.Clean(basePath)
+<span id="L36" class="ln">    36  </span>	targetPath = path.Clean(targetPath)
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>	common := CommonBase(basePath, targetPath)
+<span id="L39" class="ln">    39  </span>	if common == &#34;&#34; {
+<span id="L40" class="ln">    40  </span>		return &#34;&#34;, errors.New(&#34;could not make relative path between basePath and targetPath&#34;)
+<span id="L41" class="ln">    41  </span>	}
+<span id="L42" class="ln">    42  </span>	base := basePath
+<span id="L43" class="ln">    43  </span>	base = strings.TrimPrefix(base, common)
+<span id="L44" class="ln">    44  </span>	base = strings.TrimPrefix(base, separator)
+<span id="L45" class="ln">    45  </span>	target := targetPath
+<span id="L46" class="ln">    46  </span>	target = strings.TrimPrefix(target, common)
+<span id="L47" class="ln">    47  </span>	target = strings.TrimPrefix(target, separator)
+<span id="L48" class="ln">    48  </span>
+<span id="L49" class="ln">    49  </span>	switch {
+<span id="L50" class="ln">    50  </span>	case base == &#34;&#34; &amp;&amp; target == &#34;&#34;:
+<span id="L51" class="ln">    51  </span>		return &#34;.&#34;, nil
+<span id="L52" class="ln">    52  </span>	case base == &#34;&#34;:
+<span id="L53" class="ln">    53  </span>		return target, nil
+<span id="L54" class="ln">    54  </span>	default:
+<span id="L55" class="ln">    55  </span>		p := strings.Repeat(&#34;../&#34;, strings.Count(base, separator)+1)
+<span id="L56" class="ln">    56  </span>		return path.Join(p, target), nil
+<span id="L57" class="ln">    57  </span>	}
+<span id="L58" class="ln">    58  </span>}
+<span id="L59" class="ln">    59  </span>
+<span id="L60" class="ln">    60  </span><span class="comment">// WorkingDirectoryFS returns the os.FS for the current working directory.</span>
+<span id="L61" class="ln">    61  </span><span class="comment">// If using Windows, the os.FS used will target the osPath&#39;s volume (e.g. C:\).</span>
+<span id="L62" class="ln">    62  </span>func WorkingDirectoryFS() (*os.FS, error) {
+<span id="L63" class="ln">    63  </span>	fs := os.NewFS()
+<span id="L64" class="ln">    64  </span>	volFS, err := workingDirectoryFS(fs, runtime.GOOS, goOS.Getwd, fs.SubVolume, filepath.VolumeName)
+<span id="L65" class="ln">    65  </span>	if err == nil {
+<span id="L66" class="ln">    66  </span>		fs = volFS.(*os.FS)
+<span id="L67" class="ln">    67  </span>	}
+<span id="L68" class="ln">    68  </span>	return fs, err
+<span id="L69" class="ln">    69  </span>}
+<span id="L70" class="ln">    70  </span>
+<span id="L71" class="ln">    71  </span>func workingDirectoryFS(
+<span id="L72" class="ln">    72  </span>	fs hackpadfs.FS,
+<span id="L73" class="ln">    73  </span>	goos string,
+<span id="L74" class="ln">    74  </span>	getWorkingDirectory func() (string, error),
+<span id="L75" class="ln">    75  </span>	subVolume func(string) (hackpadfs.FS, error),
+<span id="L76" class="ln">    76  </span>	volumeName func(string) string,
+<span id="L77" class="ln">    77  </span>) (hackpadfs.FS, error) {
+<span id="L78" class="ln">    78  </span>	if goos != &#34;windows&#34; {
+<span id="L79" class="ln">    79  </span>		return fs, nil
+<span id="L80" class="ln">    80  </span>	}
+<span id="L81" class="ln">    81  </span>	wd, err := getWorkingDirectory()
+<span id="L82" class="ln">    82  </span>	if err != nil {
+<span id="L83" class="ln">    83  </span>		return nil, err
+<span id="L84" class="ln">    84  </span>	}
+<span id="L85" class="ln">    85  </span>	return subVolume(volumeName(wd))
+<span id="L86" class="ln">    86  </span>}
+<span id="L87" class="ln">    87  </span>
 </pre><p></p>
 
 <div id="footer">
