--- a/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath_test.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/fspath/fspath_test.go.html
@@ -62,112 +62,202 @@
 <span id="L5" class="ln">     5  </span>	&#34;strings&#34;
 <span id="L6" class="ln">     6  </span>	&#34;testing&#34;
 <span id="L7" class="ln">     7  </span>
-<span id="L8" class="ln">     8  </span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L9" class="ln">     9  </span>)
-<span id="L10" class="ln">    10  </span>
-<span id="L11" class="ln">    11  </span>func noSlashes(s string) string {
-<span id="L12" class="ln">    12  </span>	return strings.ReplaceAll(s, separator, &#34;&gt;&#34;)
-<span id="L13" class="ln">    13  </span>}
+<span id="L8" class="ln">     8  </span>	&#34;github.com/hack-pad/hackpadfs&#34;
+<span id="L9" class="ln">     9  </span>	&#34;github.com/hack-pad/hackpadfs/mem&#34;
+<span id="L10" class="ln">    10  </span>	&#34;github.com/pkg/errors&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L12" class="ln">    12  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L13" class="ln">    13  </span>)
 <span id="L14" class="ln">    14  </span>
-<span id="L15" class="ln">    15  </span>func TestCommonBase(t *testing.T) {
-<span id="L16" class="ln">    16  </span>	t.Parallel()
-<span id="L17" class="ln">    17  </span>	for _, tc := range []struct {
-<span id="L18" class="ln">    18  </span>		a, b   string
-<span id="L19" class="ln">    19  </span>		expect string
-<span id="L20" class="ln">    20  </span>	}{
-<span id="L21" class="ln">    21  </span>		{
-<span id="L22" class="ln">    22  </span>			a:      &#34;a&#34;,
-<span id="L23" class="ln">    23  </span>			b:      &#34;a&#34;,
-<span id="L24" class="ln">    24  </span>			expect: &#34;a&#34;,
-<span id="L25" class="ln">    25  </span>		},
-<span id="L26" class="ln">    26  </span>		{
-<span id="L27" class="ln">    27  </span>			a:      &#34;a&#34;,
-<span id="L28" class="ln">    28  </span>			b:      &#34;b&#34;,
-<span id="L29" class="ln">    29  </span>			expect: &#34;.&#34;,
-<span id="L30" class="ln">    30  </span>		},
-<span id="L31" class="ln">    31  </span>		{
-<span id="L32" class="ln">    32  </span>			a:      &#34;a/b&#34;,
-<span id="L33" class="ln">    33  </span>			b:      &#34;a/c&#34;,
-<span id="L34" class="ln">    34  </span>			expect: &#34;a&#34;,
-<span id="L35" class="ln">    35  </span>		},
-<span id="L36" class="ln">    36  </span>		{
-<span id="L37" class="ln">    37  </span>			a:      &#34;a/b/c&#34;,
-<span id="L38" class="ln">    38  </span>			b:      &#34;a/b/d&#34;,
-<span id="L39" class="ln">    39  </span>			expect: &#34;a/b&#34;,
-<span id="L40" class="ln">    40  </span>		},
-<span id="L41" class="ln">    41  </span>	} {
-<span id="L42" class="ln">    42  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
-<span id="L43" class="ln">    43  </span>		t.Run(fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.a), noSlashes(tc.b)), func(t *testing.T) {
-<span id="L44" class="ln">    44  </span>			t.Parallel()
-<span id="L45" class="ln">    45  </span>			assert.Equal(t, tc.expect, CommonBase(tc.a, tc.b))
-<span id="L46" class="ln">    46  </span>		})
-<span id="L47" class="ln">    47  </span>	}
-<span id="L48" class="ln">    48  </span>}
-<span id="L49" class="ln">    49  </span>
-<span id="L50" class="ln">    50  </span>func TestRel(t *testing.T) {
-<span id="L51" class="ln">    51  </span>	t.Parallel()
-<span id="L52" class="ln">    52  </span>	for _, tc := range []struct {
-<span id="L53" class="ln">    53  </span>		basePath   string
-<span id="L54" class="ln">    54  </span>		targetPath string
-<span id="L55" class="ln">    55  </span>		expectPath string
-<span id="L56" class="ln">    56  </span>		expectErr  string
-<span id="L57" class="ln">    57  </span>	}{
-<span id="L58" class="ln">    58  </span>		{
-<span id="L59" class="ln">    59  </span>			basePath:   &#34;a&#34;,
-<span id="L60" class="ln">    60  </span>			targetPath: &#34;a&#34;,
-<span id="L61" class="ln">    61  </span>			expectPath: &#34;.&#34;,
-<span id="L62" class="ln">    62  </span>		},
-<span id="L63" class="ln">    63  </span>		{
-<span id="L64" class="ln">    64  </span>			basePath:   &#34;a&#34;,
-<span id="L65" class="ln">    65  </span>			targetPath: &#34;b&#34;,
-<span id="L66" class="ln">    66  </span>			expectPath: &#34;../b&#34;,
-<span id="L67" class="ln">    67  </span>		},
-<span id="L68" class="ln">    68  </span>		{
-<span id="L69" class="ln">    69  </span>			basePath:   &#34;a&#34;,
-<span id="L70" class="ln">    70  </span>			targetPath: &#34;a/b&#34;,
-<span id="L71" class="ln">    71  </span>			expectPath: &#34;b&#34;,
-<span id="L72" class="ln">    72  </span>		},
-<span id="L73" class="ln">    73  </span>		{
-<span id="L74" class="ln">    74  </span>			basePath:   &#34;a/b&#34;,
-<span id="L75" class="ln">    75  </span>			targetPath: &#34;a&#34;,
-<span id="L76" class="ln">    76  </span>			expectPath: &#34;..&#34;,
-<span id="L77" class="ln">    77  </span>		},
-<span id="L78" class="ln">    78  </span>		{
-<span id="L79" class="ln">    79  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L80" class="ln">    80  </span>			targetPath: &#34;a/b/c&#34;,
-<span id="L81" class="ln">    81  </span>			expectPath: &#34;.&#34;,
-<span id="L82" class="ln">    82  </span>		},
-<span id="L83" class="ln">    83  </span>		{
-<span id="L84" class="ln">    84  </span>			basePath:   &#34;a/b&#34;,
-<span id="L85" class="ln">    85  </span>			targetPath: &#34;a/b/c&#34;,
-<span id="L86" class="ln">    86  </span>			expectPath: &#34;c&#34;,
-<span id="L87" class="ln">    87  </span>		},
-<span id="L88" class="ln">    88  </span>		{
-<span id="L89" class="ln">    89  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L90" class="ln">    90  </span>			targetPath: &#34;a/b&#34;,
-<span id="L91" class="ln">    91  </span>			expectPath: &#34;..&#34;,
-<span id="L92" class="ln">    92  </span>		},
-<span id="L93" class="ln">    93  </span>		{
-<span id="L94" class="ln">    94  </span>			basePath:   &#34;a/b/c&#34;,
-<span id="L95" class="ln">    95  </span>			targetPath: &#34;a/b/d&#34;,
-<span id="L96" class="ln">    96  </span>			expectPath: &#34;../d&#34;,
-<span id="L97" class="ln">    97  </span>		},
-<span id="L98" class="ln">    98  </span>	} {
-<span id="L99" class="ln">    99  </span>		description := fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.basePath), noSlashes(tc.targetPath))
-<span id="L100" class="ln">   100  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
-<span id="L101" class="ln">   101  </span>		t.Run(description, func(t *testing.T) {
-<span id="L102" class="ln">   102  </span>			t.Parallel()
-<span id="L103" class="ln">   103  </span>			p, err := Rel(tc.basePath, tc.targetPath)
-<span id="L104" class="ln">   104  </span>			if tc.expectErr != &#34;&#34; {
-<span id="L105" class="ln">   105  </span>				assert.EqualError(t, err, tc.expectErr)
-<span id="L106" class="ln">   106  </span>				return
-<span id="L107" class="ln">   107  </span>			}
-<span id="L108" class="ln">   108  </span>			assert.NoError(t, err)
-<span id="L109" class="ln">   109  </span>			assert.Equal(t, tc.expectPath, p)
-<span id="L110" class="ln">   110  </span>		})
-<span id="L111" class="ln">   111  </span>	}
-<span id="L112" class="ln">   112  </span>}
-<span id="L113" class="ln">   113  </span>
+<span id="L15" class="ln">    15  </span>func noSlashes(s string) string {
+<span id="L16" class="ln">    16  </span>	return strings.ReplaceAll(s, separator, &#34;&gt;&#34;)
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span>func TestCommonBase(t *testing.T) {
+<span id="L20" class="ln">    20  </span>	t.Parallel()
+<span id="L21" class="ln">    21  </span>	for _, tc := range []struct {
+<span id="L22" class="ln">    22  </span>		a, b   string
+<span id="L23" class="ln">    23  </span>		expect string
+<span id="L24" class="ln">    24  </span>	}{
+<span id="L25" class="ln">    25  </span>		{
+<span id="L26" class="ln">    26  </span>			a:      &#34;a&#34;,
+<span id="L27" class="ln">    27  </span>			b:      &#34;a&#34;,
+<span id="L28" class="ln">    28  </span>			expect: &#34;a&#34;,
+<span id="L29" class="ln">    29  </span>		},
+<span id="L30" class="ln">    30  </span>		{
+<span id="L31" class="ln">    31  </span>			a:      &#34;a&#34;,
+<span id="L32" class="ln">    32  </span>			b:      &#34;b&#34;,
+<span id="L33" class="ln">    33  </span>			expect: &#34;.&#34;,
+<span id="L34" class="ln">    34  </span>		},
+<span id="L35" class="ln">    35  </span>		{
+<span id="L36" class="ln">    36  </span>			a:      &#34;a/b&#34;,
+<span id="L37" class="ln">    37  </span>			b:      &#34;a/c&#34;,
+<span id="L38" class="ln">    38  </span>			expect: &#34;a&#34;,
+<span id="L39" class="ln">    39  </span>		},
+<span id="L40" class="ln">    40  </span>		{
+<span id="L41" class="ln">    41  </span>			a:      &#34;a/b/c&#34;,
+<span id="L42" class="ln">    42  </span>			b:      &#34;a/b/d&#34;,
+<span id="L43" class="ln">    43  </span>			expect: &#34;a/b&#34;,
+<span id="L44" class="ln">    44  </span>		},
+<span id="L45" class="ln">    45  </span>	} {
+<span id="L46" class="ln">    46  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L47" class="ln">    47  </span>		t.Run(fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.a), noSlashes(tc.b)), func(t *testing.T) {
+<span id="L48" class="ln">    48  </span>			t.Parallel()
+<span id="L49" class="ln">    49  </span>			assert.Equal(t, tc.expect, CommonBase(tc.a, tc.b))
+<span id="L50" class="ln">    50  </span>		})
+<span id="L51" class="ln">    51  </span>	}
+<span id="L52" class="ln">    52  </span>}
+<span id="L53" class="ln">    53  </span>
+<span id="L54" class="ln">    54  </span>func TestRel(t *testing.T) {
+<span id="L55" class="ln">    55  </span>	t.Parallel()
+<span id="L56" class="ln">    56  </span>	for _, tc := range []struct {
+<span id="L57" class="ln">    57  </span>		basePath   string
+<span id="L58" class="ln">    58  </span>		targetPath string
+<span id="L59" class="ln">    59  </span>		expectPath string
+<span id="L60" class="ln">    60  </span>		expectErr  string
+<span id="L61" class="ln">    61  </span>	}{
+<span id="L62" class="ln">    62  </span>		{
+<span id="L63" class="ln">    63  </span>			basePath:   &#34;a&#34;,
+<span id="L64" class="ln">    64  </span>			targetPath: &#34;a&#34;,
+<span id="L65" class="ln">    65  </span>			expectPath: &#34;.&#34;,
+<span id="L66" class="ln">    66  </span>		},
+<span id="L67" class="ln">    67  </span>		{
+<span id="L68" class="ln">    68  </span>			basePath:   &#34;a&#34;,
+<span id="L69" class="ln">    69  </span>			targetPath: &#34;b&#34;,
+<span id="L70" class="ln">    70  </span>			expectPath: &#34;../b&#34;,
+<span id="L71" class="ln">    71  </span>		},
+<span id="L72" class="ln">    72  </span>		{
+<span id="L73" class="ln">    73  </span>			basePath:   &#34;a&#34;,
+<span id="L74" class="ln">    74  </span>			targetPath: &#34;a/b&#34;,
+<span id="L75" class="ln">    75  </span>			expectPath: &#34;b&#34;,
+<span id="L76" class="ln">    76  </span>		},
+<span id="L77" class="ln">    77  </span>		{
+<span id="L78" class="ln">    78  </span>			basePath:   &#34;a/b&#34;,
+<span id="L79" class="ln">    79  </span>			targetPath: &#34;a&#34;,
+<span id="L80" class="ln">    80  </span>			expectPath: &#34;..&#34;,
+<span id="L81" class="ln">    81  </span>		},
+<span id="L82" class="ln">    82  </span>		{
+<span id="L83" class="ln">    83  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L84" class="ln">    84  </span>			targetPath: &#34;a/b/c&#34;,
+<span id="L85" class="ln">    85  </span>			expectPath: &#34;.&#34;,
+<span id="L86" class="ln">    86  </span>		},
+<span id="L87" class="ln">    87  </span>		{
+<span id="L88" class="ln">    88  </span>			basePath:   &#34;a/b&#34;,
+<span id="L89" class="ln">    89  </span>			targetPath: &#34;a/b/c&#34;,
+<span id="L90" class="ln">    90  </span>			expectPath: &#34;c&#34;,
+<span id="L91" class="ln">    91  </span>		},
+<span id="L92" class="ln">    92  </span>		{
+<span id="L93" class="ln">    93  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L94" class="ln">    94  </span>			targetPath: &#34;a/b&#34;,
+<span id="L95" class="ln">    95  </span>			expectPath: &#34;..&#34;,
+<span id="L96" class="ln">    96  </span>		},
+<span id="L97" class="ln">    97  </span>		{
+<span id="L98" class="ln">    98  </span>			basePath:   &#34;a/b/c&#34;,
+<span id="L99" class="ln">    99  </span>			targetPath: &#34;a/b/d&#34;,
+<span id="L100" class="ln">   100  </span>			expectPath: &#34;../d&#34;,
+<span id="L101" class="ln">   101  </span>		},
+<span id="L102" class="ln">   102  </span>	} {
+<span id="L103" class="ln">   103  </span>		description := fmt.Sprintf(&#34;%s --&gt; %s&#34;, noSlashes(tc.basePath), noSlashes(tc.targetPath))
+<span id="L104" class="ln">   104  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L105" class="ln">   105  </span>		t.Run(description, func(t *testing.T) {
+<span id="L106" class="ln">   106  </span>			t.Parallel()
+<span id="L107" class="ln">   107  </span>			p, err := Rel(tc.basePath, tc.targetPath)
+<span id="L108" class="ln">   108  </span>			if tc.expectErr != &#34;&#34; {
+<span id="L109" class="ln">   109  </span>				assert.EqualError(t, err, tc.expectErr)
+<span id="L110" class="ln">   110  </span>				return
+<span id="L111" class="ln">   111  </span>			}
+<span id="L112" class="ln">   112  </span>			assert.NoError(t, err)
+<span id="L113" class="ln">   113  </span>			assert.Equal(t, tc.expectPath, p)
+<span id="L114" class="ln">   114  </span>		})
+<span id="L115" class="ln">   115  </span>	}
+<span id="L116" class="ln">   116  </span>}
+<span id="L117" class="ln">   117  </span>
+<span id="L118" class="ln">   118  </span>func TestWorkingDirectoryFS(t *testing.T) {
+<span id="L119" class="ln">   119  </span>	t.Parallel()
+<span id="L120" class="ln">   120  </span>	t.Run(&#34;default fs for current OS&#34;, func(t *testing.T) {
+<span id="L121" class="ln">   121  </span>		t.Parallel()
+<span id="L122" class="ln">   122  </span>		fs, err := WorkingDirectoryFS()
+<span id="L123" class="ln">   123  </span>		assert.NoError(t, err)
+<span id="L124" class="ln">   124  </span>		assert.NotNil(t, fs)
+<span id="L125" class="ln">   125  </span>	})
+<span id="L126" class="ln">   126  </span>
+<span id="L127" class="ln">   127  </span>	fs1, err := mem.NewFS()
+<span id="L128" class="ln">   128  </span>	require.NoError(t, err)
+<span id="L129" class="ln">   129  </span>	fs2, err := mem.NewFS()
+<span id="L130" class="ln">   130  </span>	require.NoError(t, err)
+<span id="L131" class="ln">   131  </span>	for _, tc := range []struct {
+<span id="L132" class="ln">   132  </span>		description         string
+<span id="L133" class="ln">   133  </span>		fs                  hackpadfs.FS
+<span id="L134" class="ln">   134  </span>		goos                string
+<span id="L135" class="ln">   135  </span>		workingDirectory    string
+<span id="L136" class="ln">   136  </span>		workingDirectoryErr error
+<span id="L137" class="ln">   137  </span>		volumeName          string
+<span id="L138" class="ln">   138  </span>		subVolume           hackpadfs.FS
+<span id="L139" class="ln">   139  </span>		subVolumeErr        error
+<span id="L140" class="ln">   140  </span>		expectFS            hackpadfs.FS
+<span id="L141" class="ln">   141  </span>		expectErr           string
+<span id="L142" class="ln">   142  </span>	}{
+<span id="L143" class="ln">   143  </span>		{
+<span id="L144" class="ln">   144  </span>			description:  &#34;non-windows OS&#34;,
+<span id="L145" class="ln">   145  </span>			goos:         &#34;not-windows&#34;,
+<span id="L146" class="ln">   146  </span>			fs:           fs1,
+<span id="L147" class="ln">   147  </span>			subVolumeErr: errors.New(&#34;some error&#34;),
+<span id="L148" class="ln">   148  </span>			expectFS:     fs1,
+<span id="L149" class="ln">   149  </span>		},
+<span id="L150" class="ln">   150  </span>		{
+<span id="L151" class="ln">   151  </span>			description:      &#34;windows OS&#34;,
+<span id="L152" class="ln">   152  </span>			goos:             &#34;windows&#34;,
+<span id="L153" class="ln">   153  </span>			fs:               fs1,
+<span id="L154" class="ln">   154  </span>			workingDirectory: &#34;foo&#34;,
+<span id="L155" class="ln">   155  </span>			volumeName:       &#34;bar&#34;,
+<span id="L156" class="ln">   156  </span>			subVolume:        fs2,
+<span id="L157" class="ln">   157  </span>			expectFS:         fs2,
+<span id="L158" class="ln">   158  </span>			expectErr:        &#34;&#34;,
+<span id="L159" class="ln">   159  </span>		},
+<span id="L160" class="ln">   160  </span>		{
+<span id="L161" class="ln">   161  </span>			description:         &#34;windows working dir error&#34;,
+<span id="L162" class="ln">   162  </span>			goos:                &#34;windows&#34;,
+<span id="L163" class="ln">   163  </span>			workingDirectoryErr: errors.New(&#34;some error&#34;),
+<span id="L164" class="ln">   164  </span>			expectErr:           &#34;some error&#34;,
+<span id="L165" class="ln">   165  </span>		},
+<span id="L166" class="ln">   166  </span>		{
+<span id="L167" class="ln">   167  </span>			description:  &#34;windows sub volume error&#34;,
+<span id="L168" class="ln">   168  </span>			goos:         &#34;windows&#34;,
+<span id="L169" class="ln">   169  </span>			subVolumeErr: errors.New(&#34;some error&#34;),
+<span id="L170" class="ln">   170  </span>			expectErr:    &#34;some error&#34;,
+<span id="L171" class="ln">   171  </span>		},
+<span id="L172" class="ln">   172  </span>	} {
+<span id="L173" class="ln">   173  </span>		tc := tc <span class="comment">// enable parallel sub-tests</span>
+<span id="L174" class="ln">   174  </span>		t.Run(tc.description, func(t *testing.T) {
+<span id="L175" class="ln">   175  </span>			t.Parallel()
+<span id="L176" class="ln">   176  </span>			getWorkingDirectory := func() (string, error) {
+<span id="L177" class="ln">   177  </span>				return tc.workingDirectory, tc.workingDirectoryErr
+<span id="L178" class="ln">   178  </span>			}
+<span id="L179" class="ln">   179  </span>			subVolume := func(path string) (hackpadfs.FS, error) {
+<span id="L180" class="ln">   180  </span>				assert.Equal(t, tc.volumeName, path)
+<span id="L181" class="ln">   181  </span>				return tc.subVolume, tc.subVolumeErr
+<span id="L182" class="ln">   182  </span>			}
+<span id="L183" class="ln">   183  </span>			volumeName := func(path string) string {
+<span id="L184" class="ln">   184  </span>				assert.Equal(t, tc.workingDirectory, path)
+<span id="L185" class="ln">   185  </span>				return tc.volumeName
+<span id="L186" class="ln">   186  </span>			}
+<span id="L187" class="ln">   187  </span>			fs, err := workingDirectoryFS(
+<span id="L188" class="ln">   188  </span>				tc.fs,
+<span id="L189" class="ln">   189  </span>				tc.goos,
+<span id="L190" class="ln">   190  </span>				getWorkingDirectory,
+<span id="L191" class="ln">   191  </span>				subVolume,
+<span id="L192" class="ln">   192  </span>				volumeName,
+<span id="L193" class="ln">   193  </span>			)
+<span id="L194" class="ln">   194  </span>			if tc.expectErr != &#34;&#34; {
+<span id="L195" class="ln">   195  </span>				assert.EqualError(t, err, tc.expectErr)
+<span id="L196" class="ln">   196  </span>				return
+<span id="L197" class="ln">   197  </span>			}
+<span id="L198" class="ln">   198  </span>			require.NoError(t, err)
+<span id="L199" class="ln">   199  </span>			assert.Same(t, tc.expectFS, fs)
+<span id="L200" class="ln">   200  </span>		})
+<span id="L201" class="ln">   201  </span>	}
+<span id="L202" class="ln">   202  </span>}
+<span id="L203" class="ln">   203  </span>
 </pre><p></p>
 
 <div id="footer">
