--- a/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
+++ b/covet/src/github.com/johnstarich/go/covet/internal/testhelpers/fs.go.html
@@ -66,45 +66,65 @@
 <span id="L9" class="ln">     9  </span>
 <span id="L10" class="ln">    10  </span>	&#34;github.com/hack-pad/hackpadfs&#34;
 <span id="L11" class="ln">    11  </span>	&#34;github.com/hack-pad/hackpadfs/mem&#34;
-<span id="L12" class="ln">    12  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
-<span id="L13" class="ln">    13  </span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L14" class="ln">    14  </span>)
-<span id="L15" class="ln">    15  </span>
-<span id="L16" class="ln">    16  </span>const testDirPermission = 0700
+<span id="L12" class="ln">    12  </span>	&#34;github.com/hack-pad/hackpadfs/mount&#34;
+<span id="L13" class="ln">    13  </span>	&#34;github.com/hack-pad/hackpadfs/os&#34;
+<span id="L14" class="ln">    14  </span>	&#34;github.com/johnstarich/go/covet/internal/fspath&#34;
+<span id="L15" class="ln">    15  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L16" class="ln">    16  </span>)
 <span id="L17" class="ln">    17  </span>
-<span id="L18" class="ln">    18  </span><span class="comment">// OSFSWithTemp returns an os.FS instance with 1) the current module&#39;s directory and 2) a temporary directory mounted inside.</span>
-<span id="L19" class="ln">    19  </span><span class="comment">// Returns the FS paths to both mounts.</span>
-<span id="L20" class="ln">    20  </span>func OSFSWithTemp(t *testing.T, relPathToModuleDir string) (_ hackpadfs.FS, workingDirectory, tempDirectory string) {
-<span id="L21" class="ln">    21  </span>	t.Helper()
-<span id="L22" class="ln">    22  </span>
-<span id="L23" class="ln">    23  </span>	wd, err := goos.Getwd()
+<span id="L18" class="ln">    18  </span>const testDirPermission = 0700
+<span id="L19" class="ln">    19  </span>
+<span id="L20" class="ln">    20  </span><span class="comment">// FromOSToFS returns the FS and FS path for the given OS path.</span>
+<span id="L21" class="ln">    21  </span><span class="comment">// If using Windows, the os.FS used will target the osPath&#39;s volume (e.g. C:\) before converting.</span>
+<span id="L22" class="ln">    22  </span>func FromOSToFS(t *testing.T, osPath string) (*os.FS, string) {
+<span id="L23" class="ln">    23  </span>	fs, err := fspath.WorkingDirectoryFS()
 <span id="L24" class="ln">    24  </span>	require.NoError(t, err)
-<span id="L25" class="ln">    25  </span>	osFS := os.NewFS()
-<span id="L26" class="ln">    26  </span>	workingDirectory, err = osFS.FromOSPath(wd)
-<span id="L27" class="ln">    27  </span>	require.NoError(t, err)
-<span id="L28" class="ln">    28  </span>	workingDirectory = path.Join(workingDirectory, relPathToModuleDir)
+<span id="L25" class="ln">    25  </span>	fsPath, err := fs.FromOSPath(osPath)
+<span id="L26" class="ln">    26  </span>	require.NoError(t, err)
+<span id="L27" class="ln">    27  </span>	return fs, fsPath
+<span id="L28" class="ln">    28  </span>}
 <span id="L29" class="ln">    29  </span>
-<span id="L30" class="ln">    30  </span>	tempDirectory, err = osFS.FromOSPath(t.TempDir())
-<span id="L31" class="ln">    31  </span>	require.NoError(t, err)
-<span id="L32" class="ln">    32  </span>	return osFS, workingDirectory, tempDirectory
-<span id="L33" class="ln">    33  </span>}
+<span id="L30" class="ln">    30  </span><span class="comment">// OSFSWithTemp returns an os.FS instance with 1) the current module&#39;s directory and 2) a temporary directory mounted inside.</span>
+<span id="L31" class="ln">    31  </span><span class="comment">// Returns the FS paths to both mounts.</span>
+<span id="L32" class="ln">    32  </span>func OSFSWithTemp(t *testing.T) (fs hackpadfs.FS, workingDir, tempDir string) {
+<span id="L33" class="ln">    33  </span>	t.Helper()
 <span id="L34" class="ln">    34  </span>
-<span id="L35" class="ln">    35  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
-<span id="L36" class="ln">    36  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
-<span id="L37" class="ln">    37  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
-<span id="L38" class="ln">    38  </span>	t.Helper()
-<span id="L39" class="ln">    39  </span>	fs, err := mem.NewFS()
-<span id="L40" class="ln">    40  </span>	require.NoError(t, err)
-<span id="L41" class="ln">    41  </span>	for name, contents := range files {
-<span id="L42" class="ln">    42  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
-<span id="L43" class="ln">    43  </span>		f, err := hackpadfs.Create(fs, name)
-<span id="L44" class="ln">    44  </span>		require.NoError(t, err)
-<span id="L45" class="ln">    45  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
-<span id="L46" class="ln">    46  </span>		require.NoError(t, err)
-<span id="L47" class="ln">    47  </span>	}
-<span id="L48" class="ln">    48  </span>	return fs
-<span id="L49" class="ln">    49  </span>}
-<span id="L50" class="ln">    50  </span>
+<span id="L35" class="ln">    35  </span>	memFS, err := mem.NewFS()
+<span id="L36" class="ln">    36  </span>	require.NoError(t, err)
+<span id="L37" class="ln">    37  </span>	mountFS, err := mount.NewFS(memFS)
+<span id="L38" class="ln">    38  </span>	require.NoError(t, err)
+<span id="L39" class="ln">    39  </span>
+<span id="L40" class="ln">    40  </span>	wd, err := goos.Getwd()
+<span id="L41" class="ln">    41  </span>	require.NoError(t, err)
+<span id="L42" class="ln">    42  </span>	workingDirFS, workingDirSubPath := FromOSToFS(t, wd)
+<span id="L43" class="ln">    43  </span>	workingDirSubFS, err := workingDirFS.Sub(workingDirSubPath)
+<span id="L44" class="ln">    44  </span>	require.NoError(t, err)
+<span id="L45" class="ln">    45  </span>
+<span id="L46" class="ln">    46  </span>	workingDir = &#34;work&#34;
+<span id="L47" class="ln">    47  </span>	require.NoError(t, memFS.Mkdir(workingDir, testDirPermission))
+<span id="L48" class="ln">    48  </span>	require.NoError(t, mountFS.AddMount(workingDir, workingDirSubFS))
+<span id="L49" class="ln">    49  </span>
+<span id="L50" class="ln">    50  </span>	tempDir = &#34;tmp&#34;
+<span id="L51" class="ln">    51  </span>	require.NoError(t, memFS.Mkdir(tempDir, testDirPermission))
+<span id="L52" class="ln">    52  </span>	return mountFS, workingDir, tempDir
+<span id="L53" class="ln">    53  </span>}
+<span id="L54" class="ln">    54  </span>
+<span id="L55" class="ln">    55  </span><span class="comment">// FSWithFiles returns an FS with the given files contents generated inside it.</span>
+<span id="L56" class="ln">    56  </span><span class="comment">// The contents are trimmed and a newline appended for convenient comparisons.</span>
+<span id="L57" class="ln">    57  </span>func FSWithFiles(t *testing.T, files map[string]string) hackpadfs.FS {
+<span id="L58" class="ln">    58  </span>	t.Helper()
+<span id="L59" class="ln">    59  </span>	fs, err := mem.NewFS()
+<span id="L60" class="ln">    60  </span>	require.NoError(t, err)
+<span id="L61" class="ln">    61  </span>	for name, contents := range files {
+<span id="L62" class="ln">    62  </span>		require.NoError(t, fs.MkdirAll(path.Dir(name), testDirPermission))
+<span id="L63" class="ln">    63  </span>		f, err := hackpadfs.Create(fs, name)
+<span id="L64" class="ln">    64  </span>		require.NoError(t, err)
+<span id="L65" class="ln">    65  </span>		_, err = hackpadfs.WriteFile(f, []byte(strings.TrimSpace(contents)+&#34;\n&#34;))
+<span id="L66" class="ln">    66  </span>		require.NoError(t, err)
+<span id="L67" class="ln">    67  </span>	}
+<span id="L68" class="ln">    68  </span>	return fs
+<span id="L69" class="ln">    69  </span>}
+<span id="L70" class="ln">    70  </span>
 </pre><p></p>
 
 <div id="footer">
